--- a/laxyam/padyam/shrIvaiShNava-kRtam/venkaTanAthaH/yAdavAbhyudayam/02.md
+++ b/laxyam/padyam/shrIvaiShNava-kRtam/venkaTanAthaH/yAdavAbhyudayam/02.md
@@ -1,5 +1,5 @@
 +++
-title = "02 सर्गः-2"
+title = "02"
 
 +++
 अथागमानामनघेन भूम्ना धर्मस्य पूर्णेन धनागमेन।   
@@ -50,7 +50,8 @@ title = "02 सर्गः-2"
 निराशिषां पद्धतिमाददाना नैःश्रेयसीं नीतिमुपघ्नयम्ती ।   
 पुण्याशया पूर्वयुगप्ररोहमियेष देवी भुवने विधातुम् ॥
 
-अनाप्तपूर्वं किमपेक्षितं ते (किं भुक्तपूर्वेष्वधुनोपदद्याम् ।)   
+अनाप्तपूर्वं किमपेक्षितं ते (किं भुक्तपूर्वेष्वधुनोपदद्याम् ।  
+)   
 किं वोपदद्यामथवाधुनेति ।   
 वयस्यया(अ)भावविदानुयुक्ता न किञ्चिदित्येव जगाद नाथा ॥
 
@@ -103,7 +104,8 @@ title = "02 सर्गः-2"
 दिवौकसो दवकवंशलक्ष्मीं विलोक्य तां लोकनिधानगर्भाम् ।   
 विभूतिमग्रेसरवेदवादाः व्याचख्युरस्या विविधप्रकाराम् ॥
 
-पतिः ससत्त्वामपि तत्प्रभावाददुःखशीलां समये भवित्रीम् ।(आलोक्य देवीम्)   
+पतिः ससत्त्वामपि तत्प्रभावाददुःखशीलां समये भवित्रीम् ।  
+(आलोक्य देवीम्)   
 सुखैकतानाम् अवलोक्य देवीं(समये भवित्रीं) स्वसंपदं सूचयतीति मेने ॥
 
 पितृत्वमासाद्य सुरासुराणां पितामहत्वं प्रतिपत्स्यमानः ।   
@@ -248,10 +250,12 @@ title = "02 सर्गः-2"
 शयामा बभौ चान्त्रनवोत्पलश्रीः सुरस्रवन्त्येव कलिन्दकन्या ॥
 
 स्वविप्रयोगव्यसनान्निपीतं भृङ्गापदेशेन कुमुद्वतीभिः ।   
-सुधाभिराप्लाव्य करस्थिताभिः प्रच्यावयामास विषं सुधांशुः।चकाशिरे पत्रकलासमृद्ध्या व्योमोपमे वारिणि कैरवाणि ।   
+सुधाभिराप्लाव्य करस्थिताभिः प्रच्यावयामास विषं सुधांशुः।  
+चकाशिरे पत्रकलासमृद्ध्या व्योमोपमे वारिणि कैरवाणि ।   
 कलङ्कदृश्यभ्रमराणि काले स्वनथ (नाथेन) साधर्म्यमुपागतानि ॥
 
-(सरिन्मुखैस्तोयमधु प्रदिष्टं पीत्वा नवं प्रीत इवाम्बुराशिः ।)   
+(सरिन्मुखैस्तोयमधु प्रदिष्टं पीत्वा नवं प्रीत इवाम्बुराशिः ।  
+)   
 सरिन्मुखोपाहृतमम्बुराशिः पीत्वेव तोयं मधु जातहर्षः ।   
 चकार चन्द्रप्रतिबिम्बितानां करग्रहैः कामपि रासलीलाम् ॥
 
