--- a/laxyam/padyam/shrIvaiShNava-kRtam/venkaTanAthaH/yAdavAbhyudayam/04.md
+++ b/laxyam/padyam/shrIvaiShNava-kRtam/venkaTanAthaH/yAdavAbhyudayam/04.md
@@ -1,5 +1,5 @@
 +++
-title = "04 सर्गः-4"
+title = "04"
 
 +++
 मनीषितं कैतवमानुषस्य श्रुत्वा भयक्रोधपरिप्लुतात्मा ।   
@@ -121,7 +121,8 @@ title = "04 सर्गः-4"
 अनुग्रहाब्धेरिव वीचिभेदैराप्याययामास शुभैरपाङ्गैः ।   
 वनं पृथिव्या इव यौवनं तद्गोप्ता सतां गोधनवंशचन्द्रः ॥
 
-आसीन्निषेव्या पृथिवी पशूनां पुण्ड्रेक्षुरम्याणि तृणान्यभूवन् । तस्मिन्नरण्ये तरुभिः प्रपेदे कल्पद्रुमाणामनुकल्पभावः॥
+आसीन्निषेव्या पृथिवी पशूनां पुण्ड्रेक्षुरम्याणि तृणान्यभूवन् ।  
+तस्मिन्नरण्ये तरुभिः प्रपेदे कल्पद्रुमाणामनुकल्पभावः॥
 
 अदृष्टपूर्वैरधिकां विशेषैरालक्ष्य वन्याममरेन्द्रमान्याम् ।   
 नन्दोपनन्दप्रमुखैर्ननन्दे नाकाधिरूढैरिव नाथभूम्ना ॥
