--- a/laxyam/padyam/shrIvaiShNava-kRtam/venkaTanAthaH/yAdavAbhyudayam/05.md
+++ b/laxyam/padyam/shrIvaiShNava-kRtam/venkaTanAthaH/yAdavAbhyudayam/05.md
@@ -1,5 +1,5 @@
 +++
-title = "05 सर्गः-5"
+title = "05"
 
 +++
 ततः समानीतरसालपाकः संवीजयन् पाटलगन्धवाहैः।   
@@ -193,7 +193,8 @@ title = "05 सर्गः-5"
 
 मदप्रभूतध्वनयो महोक्षा रोधोविभेदोल्बणतुङ्गशृङ्गाः   
 दर्पस्य देहा इव योगसिद्धाः दन्तावलान् अन्तरयांबभूवुःसरोरुहां रक्तसितासितानां श्रिया बभौ शारदवासरश्रीः।   
-विहारभाजा गुणभेदयोगात् व्यक्तीकृता विश्वनृजेव माया ।आरक्तकल्हारविलोचनश्रीः क्लान्ता भृशं केलगतिः स्खलन्ती।   
+विहारभाजा गुणभेदयोगात् व्यक्तीकृता विश्वनृजेव माया ।  
+आरक्तकल्हारविलोचनश्रीः क्लान्ता भृशं केलगतिः स्खलन्ती।   
 उन्नालनालीकमधूपभोगात् मत्तेव मार्ता(र्त)ण्डसुता बभासे ॥
 
 वलग्नलग्नोर्मिवलीविभङ्गां काले यथास्थानगृहीतकार्श्याम् ।   
@@ -212,7 +213,8 @@ title = "05 सर्गः-5"
 विचित्रभूम्ना शरदा स्वशक्तिं विख्यापयामास विहारगोपः॥
 
 कुमुद्वतीकल्पितभृङ्गगीतः संदर्शयन् दर्पणमिन्दुबिम्बम् ।   
-सचामरश्चन्द्रिकया सिषेवे तमीश्वरं तत्र शरत्प्रदोषः।सरोरुहां रक्तसितासितानां स्थानेषु भृङ्गध्वनिभिः प्रतेने ।   
+सचामरश्चन्द्रिकया सिषेवे तमीश्वरं तत्र शरत्प्रदोषः।  
+सरोरुहां रक्तसितासितानां स्थानेषु भृङ्गध्वनिभिः प्रतेने ।   
 जिगीषतः पञ्चशरस्य विश्वं तूर्णं प्रवृत्तैरिव तूर्यघोषैः ॥
 
 निर्मुक्तभोगीन्द्रनिभैः पयोदैर्नभःस्थली व्याप्ततनुर्बभासे ।   
