--- a/laxyam/padyam/shrIvaiShNava-kRtam/venkaTanAthaH/yAdavAbhyudayam/06.md
+++ b/laxyam/padyam/shrIvaiShNava-kRtam/venkaTanAthaH/yAdavAbhyudayam/06.md
@@ -1,5 +1,5 @@
 +++
-title = "06 सर्गः-6"
+title = "06"
 
 +++
 शमयता पुरुहूतमहोत्सवं व्रजपतिः सह वल्लवयूथपैः।   
@@ -53,8 +53,11 @@ title = "06 सर्गः-6"
 सुरसगन्धविभूति निधेहि तं हरिमवेत्य गिरिं हविरुत्तमम् ॥
 
    
-(इदं प्रथमतृतीयपादयोरौकरूप्यात् संदंशनामकं पूर्णयमकम् । यत्   
-पादेर्धके वा भवति तत् पूर्णयमकम् । ततोन्यत् खण्डयमकम् )विशुद्धतोयौघपरीतपार्श्वे सुद्धाशयाः श्वेत इवान्तरीपे ।   
+(इदं प्रथमतृतीयपादयोरौकरूप्यात् संदंशनामकं पूर्णयमकम् ।  
+यत्पादेर्धके वा भवति तत् पूर्णयमकम् ।  
+ततोन्यत् खण्डयमकम् )
+
+विशुद्धतोयौघपरीतपार्श्वे सुद्धाशयाः श्वेत इवान्तरीपे ।   
 निराशिषो नित्यमिहाश्रयन्ते नैःश्रेयसं तात निवृत्तिधर्मम् ॥
 
 इह वासमही समहीनगुणे स्थिरकुञ्जगृहे जगृहे विबुधैः ।   
@@ -73,7 +76,8 @@ title = "06 सर्गः-6"
 राजतेदृशतटीमहीयसे हीयसे न यदि नाम नम्यते ॥
 
 अयोगनिद्रस्य हरेरिदानीं मान्ये पदे मानसतः प्रवृत्ताः।   
-त्वदाशयस्वच्छसरित्प्रवाहे हंसैः समं वासमिहाश्रयेम ।निशाकरस्य स्फटिकेष्विहाधिकं सुजातरूपा श्रयतो विभा सिता ।   
+त्वदाशयस्वच्छसरित्प्रवाहे हंसैः समं वासमिहाश्रयेम ।  
+निशाकरस्य स्फटिकेष्विहाधिकं सुजातरूपा श्रयतो विभा सिता ।   
 रविप्रभा च स्पृशतीव सांध्यतां सु जातरूपाश्रयतो विभासिता ॥
 
 न दन्तिनोस्मिन् मुदिता नदन्ति नो वनस्थलीलास्त्विह देवनस्थली ।   
@@ -217,7 +221,9 @@ title = "06 सर्गः-6"
 अघाकागाङ्गकागाङ्कगाङ्गकागखगाङ्गकः॥
 
 (एकस्थानचित्रम्)रजतगैरिकरत्नगणैरयं कनति कान्तलताञ्चितकाननः ।   
-त्रिजगदेकनिधानतयाधिकस्त्रिदशराजधराधरतल्लजात् ।.।(अनोष्ठ्यचित्रम्)सहेत पर्वतोयं वो गोप्तुं क्वचन कन्दरे ।   
+त्रिजगदेकनिधानतयाधिकस्त्रिदशराजधराधरतल्लजात् ।  
+.।  
+(अनोष्ठ्यचित्रम्)सहेत पर्वतोयं वो गोप्तुं क्वचन कन्दरे ।   
 अदरिद्रा वसामोत्र सर्वहेतोरिवोदरे ॥
 
 (गूढचतुर्थचित्रम्)घनाघना घनाघनाद्भुतेह शाखिसंततिः।   
