--- a/laxyam/padyam/shrIvaiShNava-kRtam/venkaTanAthaH/yAdavAbhyudayam/07.md
+++ b/laxyam/padyam/shrIvaiShNava-kRtam/venkaTanAthaH/yAdavAbhyudayam/07.md
@@ -1,5 +1,5 @@
 +++
-title = "07 सर्गः-7"
+title = "07"
 
 +++
 व्रजौकसो विस्मयमन्थराक्षा बालार्कवर्णं वसनं वसानम् ।   
@@ -101,7 +101,8 @@ title = "07 सर्गः-7"
 तडिद्भिरापादितताण्डवं तत् कालस्य संगीतमपूर्वमासीत् ॥
 
 विद्युद्गुणैः संदितया समन्तात् व्रजे मरुत्वान् मृगयामिवेच्छन्।   
-समावृणोत् सान्द्रतमिस्रधाम्ना मेघात्मना वागुरया वनाद्रीन्।आसारधाराच्छुरितेन्द्रचापैर्मेघैर्दिशा माघवती चकाशे ।   
+समावृणोत् सान्द्रतमिस्रधाम्ना मेघात्मना वागुरया वनाद्रीन्।  
+आसारधाराच्छुरितेन्द्रचापैर्मेघैर्दिशा माघवती चकाशे ।   
 आमुक्तमुक्तागुणरत्नदामैः सिन्धोरपत्यैरिव धीरनादैः॥
 
 हुंकारवन्तः स्तनितैरुदारैः क्षणप्रभाकाञ्चनवेत्रभाजः।   
@@ -191,7 +192,8 @@ title = "07 सर्गः-7"
 सगोधनैस्तत्र सुरेन्द्रभीत्या गोपैस्तदा गूढमिवावतस्थे ॥
 
 बिभर्ति कृष्णः सुकुमारगात्रः क्षमाधरं तेन विभावयामः।   
-तदग्रजोसौ बिभृयादशेषां बलः क्षमामित्यवदन् व्रजस्थाः ।बभुः स्वशाखाग्रथिताग्रपादैस्तपोधनैः साकमधःशिरोभिः।   
+तदग्रजोसौ बिभृयादशेषां बलः क्षमामित्यवदन् व्रजस्थाः ।  
+बभुः स्वशाखाग्रथिताग्रपादैस्तपोधनैः साकमधःशिरोभिः।   
 कृताभिमुख्याः कृतिनो मुकुन्दे तपःप्रवृत्ता इव तत्र वृक्षाः॥
 
 अधोमुखस्याद्रिपतेस्तृणानि स्पृष्ट्वा मुकुन्देन निदर्शितानि ।   
