--- a/laxyam/padyam/shrIvaiShNava-kRtam/venkaTanAthaH/yAdavAbhyudayam/08.md
+++ b/laxyam/padyam/shrIvaiShNava-kRtam/venkaTanAthaH/yAdavAbhyudayam/08.md
@@ -1,5 +1,5 @@
 +++
-title = "08 सर्गः-8"
+title = "08"
 
 +++
 अथ प्रसूनायुधभागधेयान्यारब्धमन्दानिलसौतिकानि ।   
@@ -226,7 +226,8 @@ title = "08 सर्गः-8"
 कृतासिकाः कृष्णवियोगखेदात् कामास्त्रपर्यङ्कगताः इवासन् ॥
 
 विलीनचित्ता विषमास्त्रतापात् विलापयन्त्यो वसुधां विलापैः।   
-अदृश्यरुपस्य हरेरगायन् गुणांश्चरित्राणि च गोपकन्याः।मुकुन्दविश्लेषविमोहितानां संश्रूयमाणानि मुहुर्वनान्ते ।   
+अदृश्यरुपस्य हरेरगायन् गुणांश्चरित्राणि च गोपकन्याः।  
+मुकुन्दविश्लेषविमोहितानां संश्रूयमाणानि मुहुर्वनान्ते ।   
 शमप्रदान्यात्मविदामभूवंस्त्रय्यन्तगन्धीनि वचांसि तासाम् ॥
 
 स माययात्मानमसौ परेषां प्रच्छाद्य संदर्शयति प्रसाद्त् ।   
