--- a/laxyam/padyam/shrIvaiShNava-kRtam/venkaTanAthaH/yAdavAbhyudayam/09.md
+++ b/laxyam/padyam/shrIvaiShNava-kRtam/venkaTanAthaH/yAdavAbhyudayam/09.md
@@ -1,5 +1,5 @@
 +++
-title = "09 सर्गः-9"
+title = "09"
 
 +++
 अथ भोजपतिर्जगत्पतेरवतारं भुवि नारदान्मुनेः।   
@@ -173,14 +173,16 @@ title = "09 सर्गः-9"
 तदवस्थतदर्हभूमिकान् यमिनोनन्यमतीन् अमन्यत ॥
 
 शुभतर्णकशोभितान्तिकाः सविधे तस्य च घेनुविग्रहाः।   
-अनघाङ्गवतीरमन्यत श्वसितैरस्य समुत्थिताः श्रुतीः।प्रणुनाव च भक्तिसंनतः प्रणिधानेन विना समीक्षितम् ।   
+अनघाङ्गवतीरमन्यत श्वसितैरस्य समुत्थिताः श्रुतीः।  
+प्रणुनाव च भक्तिसंनतः प्रणिधानेन विना समीक्षितम् ।   
 हरिमद्भुतगोपखेलनं श्रि(शृ)तसर्वातिथिमागतोतिथिः॥
 
 दुरितग्रहयोगदुःखितं त्रिगुणग्रन्थिनिबन्धनिघ्नितम् ।   
 पतितं निजपादपङ्कजे परिगृह्णीष्व घृणानिधान माम् ॥
 
 स्वपदप्लवमाश्रितान् जनान् नयसे पारमपारवैभवः।   
-अतिवेलमहोर्मिसंकुले कलुषोदन्वति कर्णधारितः।रमया सह राजहंसवत् परमं धाम विभूषयन् भवान् ।   
+अतिवेलमहोर्मिसंकुले कलुषोदन्वति कर्णधारितः।  
+रमया सह राजहंसवत् परमं धाम विभूषयन् भवान् ।   
 प्रणिधानवतामपङ्किले पदमेतन्निदधाति मानसे ॥
 
 अतिरोधिरसौ निधिः श्रुतेरनिमेषव्रतदेशिनी दृशोः।   
@@ -343,7 +345,8 @@ title = "09 सर्गः-9"
 विरहव्यथया तु तीव्रया वृजिनाम्भोधिमशोषयत् प्रभुः॥
 
 परवन्ति जगन्ति बाधितुं नियतिः किं न करोति निष्ठुरा।   
-विजहौ करुणानिधिः प्रियाः विरहे तस्य च ताभिरास्यत।विनिवेश्य रथे सितासितौ वसुदेवस्य सुतौ स यादवः।   
+विजहौ करुणानिधिः प्रियाः विरहे तस्य च ताभिरास्यत।  
+विनिवेश्य रथे सितासितौ वसुदेवस्य सुतौ स यादवः।   
 मणिभङ्गरुचं महापगां दिवमुष्णांशुरिव व्यगाहत ॥
 
 अघमर्षणलीनकिल्बिषः सलिले मग्नतनुर्ददर्श तौ ।   
