--- a/laxyam/padyam/shrIvaiShNava-kRtam/venkaTanAthaH/yAdavAbhyudayam/10.md
+++ b/laxyam/padyam/shrIvaiShNava-kRtam/venkaTanAthaH/yAdavAbhyudayam/10.md
@@ -1,5 +1,5 @@
 +++
-title = "10 सर्गः-10"
+title = "10"
 
 +++
 ततस्तौ ददृशुस्तत्र विशन्तौ राजवीथिकाम् ।   
@@ -216,7 +216,8 @@ title = "10 सर्गः-10"
 रमा राधादयश्चेति राशिभेदैर्न भिद्यसे ॥
 
 नियन्ता सर्वभूतानां नियन्तव्यैर्नियम्यसे ।   
-पितामहमुखैः पुत्री मम पुत्रोसि मायया।महता त्वत्पदेनैव मारुतिन्यायमाश्रिताः।   
+पितामहमुखैः पुत्री मम पुत्रोसि मायया।  
+महता त्वत्पदेनैव मारुतिन्यायमाश्रिताः।   
 निस्तरन्त्यचिरात् सन्तो दुस्तरं भवसागरम् ॥
 
 अहितोदन्वदौर्वाग्निमशेषोत्कर्षमातरम् ।   
@@ -310,7 +311,8 @@ title = "10 सर्गः-10"
 व्यक्तिमन्तोभवन् वेदास्त्यजन्तो धेनुभूमिकाम् ॥
 
 पद्माकमलदायादं पदं तस्य स्वमौलिभिः।   
-श्रुतयो धारयामासुः पादपीठीकृतात्मभिः।स वेणुः शङ्खरूपेण प्राचा परिपचेलिमः।   
+श्रुतयो धारयामासुः पादपीठीकृतात्मभिः।  
+स वेणुः शङ्खरूपेण प्राचा परिपचेलिमः।   
 अगोपीसंविभागार्हं पपौ तस्याधरामृतम् ॥
 
 दिदेश सांदीपनये धनुर्वेदोपदेशिने ।   
@@ -320,7 +322,8 @@ title = "10 सर्गः-10"
 कंसजित् कंसपितरं सुधर्मामध्यवासयत् ॥
 
 अशेषरत्नचित्रां तामतीतस्तुतिगोचराम् ।   
-अद्वैतमिव सर्वेषामद्भुतानाममन्यत ।स च तस्यानुभावेन निध्यातनयपद्धतिः।   
+अद्वैतमिव सर्वेषामद्भुतानाममन्यत ।  
+स च तस्यानुभावेन निध्यातनयपद्धतिः।   
 प्रजापालनधर्मस्य पारदृश्वतमोभवत् ॥
 
 कृष्णपक्षमपि प्राप्य स राजा विश्वरञ्जकः।   
