--- a/laxyam/padyam/shrIvaiShNava-kRtam/venkaTanAthaH/yAdavAbhyudayam/11.md
+++ b/laxyam/padyam/shrIvaiShNava-kRtam/venkaTanAthaH/yAdavAbhyudayam/11.md
@@ -1,5 +1,5 @@
 +++
-title = "11 सर्गः-11"
+title = "11"
 
 +++
 तदद्भुतं क्रीडितकं क्रमेण श्रुत्वा हरेरप्रतिमानशक्तेः।   
@@ -69,7 +69,8 @@ title = "11 सर्गः-11"
 तरङ्गहस्तप्रहितैः सरस्वान् अभ्यर्चयामास यदून् पयोभिः॥
 
 चिरप्रयातं परिहृत्य शय्यामभ्यागतं वारिधिरादरेण ।   
-मिथः समायोजितवीचिहस्तः प्रायः प्रभुं प्रार्थयत प्रसादम् ।निवेश्य सेनामुदधेः समीपे तालाङ्कसंभावितराजताले ।   
+मिथः समायोजितवीचिहस्तः प्रायः प्रभुं प्रार्थयत प्रसादम् ।  
+निवेश्य सेनामुदधेः समीपे तालाङ्कसंभावितराजताले ।   
 दयार्द्रमेघोपमदेहभूमा विश्वंभरो विश्रमयांचकार ॥
 
 कदाचिदात्मानमवाप्तरत्नं कपालिनं चन्द्रकलावतंसम् ।   
@@ -130,7 +131,8 @@ title = "11 सर्गः-11"
 अमर्त्यमुख्यैरपि जातकोपैरक्षोभ्यतां व्याकुरुतेव यस्याः॥
 
 यत्सौधपर्यङ्कजुषां वधूनां संगृह्य निःश्वासगुणं समीरः।   
-पद्मेषु नूनं प्रदिशन् प्रभाते गतागतं याति गवाक्षवर्त्मा ।जालानि यत्रागुरुधूमजालैः संदिग्धपारावतसंनिधानैः।   
+पद्मेषु नूनं प्रदिशन् प्रभाते गतागतं याति गवाक्षवर्त्मा ।  
+जालानि यत्रागुरुधूमजालैः संदिग्धपारावतसंनिधानैः।   
 अवासयन् नूनमहार्यगन्धान् आसेदुषां नाकसदां विमानान्॥
 
 परार्थ्यरत्नप्रचितात्मभिर्या प्रासादमालाभिरलंकृताङ्गी ।   
@@ -191,7 +193,8 @@ title = "11 सर्गः-11"
 नरोत्तमैर्नाकसदश्य याभूत् सुभ्रूभिरप्यप्सरसः स्वयं द्यौः॥
 
 वप्रेषु यस्याः स्फटितप्रदेशान् द्वाराभिमानात् द्रुतमापतन्तः।   
-अवापुरागन्तुजनाः सलीलैरन्तःस्मितैर्नागरकैर्निरोधम् ।पयोभिरच्छस्फटिकद्रवाभैः दवीयसां दर्शनमादधानैः।   
+अवापुरागन्तुजनाः सलीलैरन्तःस्मितैर्नागरकैर्निरोधम् ।  
+पयोभिरच्छस्फटिकद्रवाभैः दवीयसां दर्शनमादधानैः।   
 सुधाधिकस्वादुरसैरविन्दन् स्वान्तोपमां यत्र सतां सरस्यः॥
 
 यामेकचित्तः प्रसमीक्ष्य तुष्यन् यादोनिधेराहितदिष्टिवृद्धिम् ।   
