--- a/laxyam/padyam/shrIvaiShNava-kRtam/venkaTanAthaH/yAdavAbhyudayam/12.md
+++ b/laxyam/padyam/shrIvaiShNava-kRtam/venkaTanAthaH/yAdavAbhyudayam/12.md
@@ -1,5 +1,5 @@
 +++
-title = "12 सर्गः-12"
+title = "12"
 
 +++
 तथाविधानन्दमहापयोधेस्तरङ्गवृत्त्या भजतोवतारान् ।   
@@ -87,7 +87,8 @@ title = "12 सर्गः-12"
 रम्या रमोत्पत्तिदशाविशेषात् जाम्बूनदी जङ्गमपद्मिनीव ॥
 
 तस्यास्तनुं वर्णयतो ममैवं हीनोपमा दोषपदं न विन्देत् ।   
-निदर्शनं तैरपि नित्यदृष्टं येषां निकर्षोपि गुणो यतः स्यात् ।तारेण तस्याश्चिकुरान्धकारे तारायितं मौक्तिकजालकेन।   
+निदर्शनं तैरपि नित्यदृष्टं येषां निकर्षोपि गुणो यतः स्यात् ।  
+तारेण तस्याश्चिकुरान्धकारे तारायितं मौक्तिकजालकेन।   
 प्रायेण योसौ प्रलयावसाने निशीथसृष्टेरभवन्निदानम् ॥
 
 द्युतिं शिखारत्नसहस्ररश्मेर्ज्योत्स्नां च मुक्ताफलजालजाताम् ।   
