--- a/laxyam/padyam/shrIvaiShNava-kRtam/venkaTanAthaH/yAdavAbhyudayam/15.md
+++ b/laxyam/padyam/shrIvaiShNava-kRtam/venkaTanAthaH/yAdavAbhyudayam/15.md
@@ -1,12 +1,13 @@
 +++
-title = "15 सर्गः-15"
+title = "15"
 
 +++
 अथ पद्मभुवः पितुः सकाशादभिगच्छन् यदुपुङ्गवं दिदृक्षुः।   
 मुनिरध्वनि वल्लकीसहायः प्रजगौ लास्यतरङ्गितप्रचारः॥
 
 अहमस्मि पितामहस्य सूनुः स विभोरात्मभुवः सरोजनाभेः।   
-भजते भुवि साम्प्रतं स देवः स्वयमेवानकदुन्दुभेः सुतत्वम् ।अवरोपितदोपसूनुभावः स नटाः सम्प्रति देवकीसुतस्सन् ।   
+भजते भुवि साम्प्रतं स देवः स्वयमेवानकदुन्दुभेः सुतत्वम् ।  
+अवरोपितदोपसूनुभावः स नटाः सम्प्रति देवकीसुतस्सन् ।   
 परितोषितभावुकः स्ववृत्त्या श्रुतिलक्ष्यां महतीं प्रियामविन्दत् ॥
 
 तदहं तमसः स्थितं परस्तादनपायद्युति भास्वतात्मनैव   
@@ -252,7 +253,8 @@ title = "15 सर्गः-15"
 मुदितो मुनिरब्जयोनिजन्मा मुहुराधूतकरस्तदभ्यनन्दत् ॥
 
 क्षितिपालगणोदधिस्तदानीं विषमारम्भविरोधसेतुभिन्नः।   
-स्तिमितक्षुभिताकृतिर्बभासे गगनाम्भोधरसन्निभो गभीरः।ननृते मुदितेन नारदेन क्षिपता मङ्क्षु मृगत्वगुत्तरीयम् ।   
+स्तिमितक्षुभिताकृतिर्बभासे गगनाम्भोधरसन्निभो गभीरः।  
+ननृते मुदितेन नारदेन क्षिपता मङ्क्षु मृगत्वगुत्तरीयम् ।   
 सुरसिन्धुसुतोदितं विपञ्चीमसकृद्गापयतानुनादवृत्त्या ॥
 
 उदगीयत यत् तदा विधिज्ञैः सममुद्गातृभिरेकताननादैः।   
