--- a/laxyam/padyam/shrIvaiShNava-kRtam/venkaTanAthaH/yAdavAbhyudayam/16.md
+++ b/laxyam/padyam/shrIvaiShNava-kRtam/venkaTanAthaH/yAdavAbhyudayam/16.md
@@ -1,286 +1,429 @@
 +++
-title = "16 सर्गः-16"
+title = "16"
 
 +++
-ऐरावतमथारुह्य श्वेताद्रिमिव जङ्गमम् । पुरीं द्वारवतीं शौरेराजगाम पुरन्दरः॥
+ऐरावतमथारुह्य श्वेताद्रिमिव जङ्गमम् ।  
+पुरीं द्वारवतीं शौरेराजगाम पुरन्दरः॥
 
-अपत्यभावमापन्नमात्मानममृतोदधेः।निमेषरहितैः पौरैर्देवभूतैर्निरीक्षितम् ॥
+अपत्यभावमापन्नमात्मानममृतोदधेः।  
+निमेषरहितैः पौरैर्देवभूतैर्निरीक्षितम् ॥
 
-अदृश्यं मन्दपुण्यानाममन्दप्रीतिदायिनम् । आत्तदेहमिव स्वर्गमासेचनकदर्शनम् ॥
+अदृश्यं मन्दपुण्यानाममन्दप्रीतिदायिनम् ।  
+आत्तदेहमिव स्वर्गमासेचनकदर्शनम् ॥
 
-महनीयपरिष्कारं वल्गुध्वजमतल्लिकम् । महोत्सवमिवाशानामाशाभ्यधिकसंपदम् ॥
+महनीयपरिष्कारं वल्गुध्वजमतल्लिकम् ।  
+महोत्सवमिवाशानामाशाभ्यधिकसंपदम् ॥
 
-उदधेरिव मन्थेन पीडितस्य समुत्थितैः। दृढलग्नैरिवोत्पत्तौ दीप्तं शोणितबिन्दुभिः॥
+उदधेरिव मन्थेन पीडितस्य समुत्थितैः।  
+दृढलग्नैरिवोत्पत्तौ दीप्तं शोणितबिन्दुभिः॥
 
-दैत्यदानवदर्पघ्नैर्दन्तैर्दलितमन्दरैः। सिंहानामपि हन्तारं सिंहवक्त्रविभूषणैः॥
+दैत्यदानवदर्पघ्नैर्दन्तैर्दलितमन्दरैः।  
+सिंहानामपि हन्तारं सिंहवक्त्रविभूषणैः॥
 
-मेरुकल्पेन रुपेण मेदिनीधृतिहेतुना । त्रिदशप्रीतिदातारं स्त्यानसिन्दूरधातुना ॥
+मेरुकल्पेन रुपेण मेदिनीधृतिहेतुना ।  
+त्रिदशप्रीतिदातारं स्त्यानसिन्दूरधातुना ॥
 
-मूर्ध्ना विपुलतुङ्गेन मेनकास्तनबन्धुना । दधतं मौक्तिकाकल्पं गङ्गाबुद्बुदनिर्मलम् ॥
+मूर्ध्ना विपुलतुङ्गेन मेनकास्तनबन्धुना ।  
+दधतं मौक्तिकाकल्पं गङ्गाबुद्बुदनिर्मलम् ॥
 
-अजहद्भृङ्गगीतेन गर्जाडम्बरशोभिना । स्वकान्त्या कर्णतालेन क्लृप्तसंगीतखेलनम् ॥
+अजहद्भृङ्गगीतेन गर्जाडम्बरशोभिना ।  
+स्वकान्त्या कर्णतालेन क्लृप्तसंगीतखेलनम् ॥
 
-नर्तयन्तममर्त्यानां नेत्रकौतुकसुतिकाम् । नासां त्रिदशनारीणामूरुनिर्माणमातृकाम् ॥
+नर्तयन्तममर्त्यानां नेत्रकौतुकसुतिकाम् ।  
+नासां त्रिदशनारीणामूरुनिर्माणमातृकाम् ॥
 
-मङ्गलत्वमिवेच्छद्भिर्हैमशङ्खादिमण्डनैः। आश्रितं रत्नपूर्णेन कुम्भेन च महीयसा ॥
+मङ्गलत्वमिवेच्छद्भिर्हैमशङ्खादिमण्डनैः।  
+आश्रितं रत्नपूर्णेन कुम्भेन च महीयसा ॥
 
-विभूतिशरदम्भोदैः कीर्तिवल्लीगुलुच्छकैः। कान्तिसागरकल्लोलैः सपक्षमिव चामरैः॥
+विभूतिशरदम्भोदैः कीर्तिवल्लीगुलुच्छकैः।  
+कान्तिसागरकल्लोलैः सपक्षमिव चामरैः॥
 
-सहजं प्रभया चन्द्रं वारुणीं मदसंपदा । सूचयन्तं स्वमूर्त्या च सुधां शुद्धानुभाव्यया ॥
+सहजं प्रभया चन्द्रं वारुणीं मदसंपदा ।  
+सूचयन्तं स्वमूर्त्या च सुधां शुद्धानुभाव्यया ॥
 
-जगदामोदजनकं दानार्द्रकरपुष्करम् । दभ्रयन्तमिवौदार्यात् दिव्यपादपसंपदम् ॥
+जगदामोदजनकं दानार्द्रकरपुष्करम् ।  
+दभ्रयन्तमिवौदार्यात् दिव्यपादपसंपदम् ॥
 
-उदग्रबहुदन्तांशुं बृंहितव्याप्तदिङ्मुखम् । हसन्तमिव दिङ्नागान् अन्यान् अतिबलानपि ॥
+उदग्रबहुदन्तांशुं बृंहितव्याप्तदिङ्मुखम् ।  
+हसन्तमिव दिङ्नागान् अन्यान् अतिबलानपि ॥
 
-उद्वहन्तं कदलिकां काञ्चनीं किङ्किणीफलाम् ।वप्राभिघातभीतस्य सुमेरोरुपदामिव॥
+उद्वहन्तं कदलिकां काञ्चनीं किङ्किणीफलाम् ।  
+वप्राभिघातभीतस्य सुमेरोरुपदामिव॥
 
-चित्रकम्बलसञ्छन्नं कान्तं कनककक्ष्यया। विद्युतेव परिष्वक्तं वासरान्तशरद्घनम् ॥
+चित्रकम्बलसञ्छन्नं कान्तं कनककक्ष्यया।  
+विद्युतेव परिष्वक्तं वासरान्तशरद्घनम् ॥
 
-अवधिं दर्शनीयानामाकल्पमनघं दिवः। जीवातुं देवसैन्यानां दर्पभङ्गं विरुन्धताम् ॥
+अवधिं दर्शनीयानामाकल्पमनघं दिवः।  
+जीवातुं देवसैन्यानां दर्पभङ्गं विरुन्धताम् ॥
 
-घण्टायुगलनादेन नगेन्द्रेष्वनुनादिना । क्षरन्तममृतक्ष्वेडौ कर्णेष्वमरतद्द्विषाम् ॥
+घण्टायुगलनादेन नगेन्द्रेष्वनुनादिना ।  
+क्षरन्तममृतक्ष्वेडौ कर्णेष्वमरतद्द्विषाम् ॥
 
-महता मदगन्धेन तस्य विग्ना विबभ्रमुः। उत्खातविपुलस्तम्भा नागास्त्रुटितशृङ्खलाः॥
+महता मदगन्धेन तस्य विग्ना विबभ्रमुः।  
+उत्खातविपुलस्तम्भा नागास्त्रुटितशृङ्खलाः॥
 
-स तं द्वारवतीद्वारे समवस्थाप्य सानुगम् । आससाद हरेः स्थानमवज्ञातत्रिविष्टपम् ॥
+स तं द्वारवतीद्वारे समवस्थाप्य सानुगम् ।  
+आससाद हरेः स्थानमवज्ञातत्रिविष्टपम् ॥
 
-शुभानामिव साम्राज्यं श्वेतद्वीपमिवापरम् । निवेदितसमाहूतः प्रासादं प्राविशत् प्रभोः॥
+शुभानामिव साम्राज्यं श्वेतद्वीपमिवापरम् ।  
+निवेदितसमाहूतः प्रासादं प्राविशत् प्रभोः॥
 
-स तेन विहितां शक्रः प्रतिगृह्य प्रियार्हणाम् । निजगाद निजां भीतिं गद्गदोद्गमया गिरा॥
+स तेन विहितां शक्रः प्रतिगृह्य प्रियार्हणाम् ।  
+निजगाद निजां भीतिं गद्गदोद्गमया गिरा॥
 
-दयनीयेषु देवेषु देवदेव त्वयाधुना । अपाङ्गाः परिपात्यन्तामनुक्रोशानुवर्तिनः॥
+दयनीयेषु देवेषु देवदेव त्वयाधुना ।  
+अपाङ्गाः परिपात्यन्तामनुक्रोशानुवर्तिनः॥
 
-सुषुवे नरसिंहं त्वां भक्तप्रह्लादसंमुखम् । रक्षार्थमिह दीनानां रत्नस्थूणेव देवकी ॥
+सुषुवे नरसिंहं त्वां भक्तप्रह्लादसंमुखम् ।  
+रक्षार्थमिह दीनानां रत्नस्थूणेव देवकी ॥
 
-नाथ त्वयि निराबाधें त्रिलोकीं त्रातुमागते । नरको नाम दैत्येन्द्रः कदर्थयति नाकिनः॥
+नाथ त्वयि निराबाधें त्रिलोकीं त्रातुमागते ।  
+नरको नाम दैत्येन्द्रः कदर्थयति नाकिनः॥
 
-धर्मसूकररूपस्य तवासौ क्षमयान्वये। उत्पात इव भूतानामुद्बभूव भयानकः॥
+धर्मसूकररूपस्य तवासौ क्षमयान्वये।  
+उत्पात इव भूतानामुद्बभूव भयानकः॥
 
-जननी सर्भूतानां पत्नी तव वसुन्धरा । प्रसूय नरकं देवी दूयते त्वदुपेक्षया ॥
+जननी सर्भूतानां पत्नी तव वसुन्धरा ।  
+प्रसूय नरकं देवी दूयते त्वदुपेक्षया ॥
 
-न हिरण्यहिरण्याक्षौ न मधुर्न च कैटभः। उपमानपदे तस्य त्वच्छक्तिजनितात्मनः॥
+न हिरण्यहिरण्याक्षौ न मधुर्न च कैटभः।  
+उपमानपदे तस्य त्वच्छक्तिजनितात्मनः॥
 
-एष कल्पान्तवृत्तान्तमिदानीन्तनयन्निव।विधुनोति त्वदालम्बं ब्रह्मस्तम्बमिदम्परः॥
+एष कल्पान्तवृत्तान्तमिदानीन्तनयन्निव।  
+विधुनोति त्वदालम्बं ब्रह्मस्तम्बमिदम्परः॥
 
-विक्रमस्रेतसा तस्य बृहन्त्यपि बलानि नः।सहसा भेदमायान्ति सैकता इव सेतवः॥
+विक्रमस्रेतसा तस्य बृहन्त्यपि बलानि नः।  
+सहसा भेदमायान्ति सैकता इव सेतवः॥
 
-यदृच्छोपगमेप्यस्य यान्ति देवगृहाश्रिताः।प्रधावितुमनीशानाः साक्षितां सालभञ्जिकाः॥
+यदृच्छोपगमेप्यस्य यान्ति देवगृहाश्रिताः।  
+प्रधावितुमनीशानाः साक्षितां सालभञ्जिकाः॥
 
-महता मत्प्रयुक्तेन वज्रेण ज्वलितात्मना।निलिल्ये तस्य दोर्मध्ये निष्काभरणवर्ष्मणा ॥
+महता मत्प्रयुक्तेन वज्रेण ज्वलितात्मना।  
+निलिल्ये तस्य दोर्मध्ये निष्काभरणवर्ष्मणा ॥
 
-त्वत्कोप इव दीप्तोपि ज्वलनो न प्रकाशते।ज्योतिरिङ्गणवत् तस्य द्युमणेरिव सन्निधौ॥
+त्वत्कोप इव दीप्तोपि ज्वलनो न प्रकाशते।  
+ज्योतिरिङ्गणवत् तस्य द्युमणेरिव सन्निधौ॥
 
-अमोघत्वयशोभङ्गभयादिव निवर्तते।अखण्डितबले तस्मिन् दण्डो दण्डधरार्पितः॥
+अमोघत्वयशोभङ्गभयादिव निवर्तते।  
+अखण्डितबले तस्मिन् दण्डो दण्डधरार्पितः॥
 
-नयनार्चिष्मतस्तस्य नैर्ऋतेश्वरवाहिनी।अपसृप्य पुरोभागादद्यापि न निवर्तते ॥
+नयनार्चिष्मतस्तस्य नैर्ऋतेश्वरवाहिनी।  
+अपसृप्य पुरोभागादद्यापि न निवर्तते ॥
 
-तं सुप्तमपि वा मत्तं वारुणो वैरिदारुणः।न रोद्धुं क्षमते पाशो नलस्तम्ब इव द्विपम् ॥
+तं सुप्तमपि वा मत्तं वारुणो वैरिदारुणः।  
+न रोद्धुं क्षमते पाशो नलस्तम्ब इव द्विपम् ॥
 
-शक्तः शमयितुं तस्य संवर्तार्हजवोपि सन्।नभस्वान् खेलतः सङ्ख्ये न स्वेदकणिकामपि॥
+शक्तः शमयितुं तस्य संवर्तार्हजवोपि सन्।  
+नभस्वान् खेलतः सङ्ख्ये न स्वेदकणिकामपि॥
 
-धनदेन गदा तस्य महती मूर्ध्नि पातिता।अभित्त्वा पौष्पमापीडमनापीडत्वमादधे ॥
+धनदेन गदा तस्य महती मूर्ध्नि पातिता।  
+अभित्त्वा पौष्पमापीडमनापीडत्वमादधे ॥
 
-जटिलान् कृत्तिवसनात् नियमं तीव्रमास्थितान्।तपस्विन इति ज्ञात्वा स रुद्रान् नातिवर्तते॥
+जटिलान् कृत्तिवसनात् नियमं तीव्रमास्थितान्।  
+तपस्विन इति ज्ञात्वा स रुद्रान् नातिवर्तते॥
 
-अहरत् वारुणं छत्रं मामकं मणिभूधरम्।अमृतस्यन्दिनी चास्मज्जनन्या मणिकुण्डले॥
+अहरत् वारुणं छत्रं मामकं मणिभूधरम्।  
+अमृतस्यन्दिनी चास्मज्जनन्या मणिकुण्डले॥
 
-आदर्शमिव संपत्तेरमृताब्धेरिवाशयम्।औपवाह्यमसौ मत्कमारुरुक्षति साम्प्रतम् ॥
+आदर्शमिव संपत्तेरमृताब्धेरिवाशयम्।  
+औपवाह्यमसौ मत्कमारुरुक्षति साम्प्रतम् ॥
 
-देनदानवसिद्धानां नृपाणामपि कन्यकाः।अपहृत्य त्वदेकार्हास्त्वरते पाणिपीडने॥
+देनदानवसिद्धानां नृपाणामपि कन्यकाः।  
+अपहृत्य त्वदेकार्हास्त्वरते पाणिपीडने॥
 
-स भौमस्त्वन्निरस्तानां समवाय इवोत्थितः।बाधते विबुधानेवं बलवीर्यपराक्रमैः॥
+स भौमस्त्वन्निरस्तानां समवाय इवोत्थितः।  
+बाधते विबुधानेवं बलवीर्यपराक्रमैः॥
 
-तदेवमवसीदत्सु दया देवेषु पात्यताम्।अनपह्नुतदास्यानां दोषनिह्नवसाक्षिणी ॥
+तदेवमवसीदत्सु दया देवेषु पात्यताम्।  
+अनपह्नुतदास्यानां दोषनिह्नवसाक्षिणी ॥
 
-तमर्धं भूमिभारस्य त्वयैवोत्पादितं प्रभो।त्रिलोकीकण्टकं तीक्ष्णं त्वमेवोद्धर्तुमर्हसि ॥
+तमर्धं भूमिभारस्य त्वयैवोत्पादितं प्रभो।  
+त्रिलोकीकण्टकं तीक्ष्णं त्वमेवोद्धर्तुमर्हसि ॥
 
-निवर्त्य धर्मशल्येस्मिन् निदाने सर्वपाप्मनाम् ।निवेदनमिहास्माकमंशो निर्वहणं तव॥
+निवर्त्य धर्मशल्येस्मिन् निदाने सर्वपाप्मनाम् ।  
+निवेदनमिहास्माकमंशो निर्वहणं तव॥
 
-मशकामर्शवत् यस्य मधुकैटभमर्दनम्।तदन्यदनुजध्वंसे तस्य ते किमिवाद्भुतम्॥
+मशकामर्शवत् यस्य मधुकैटभमर्दनम्।  
+तदन्यदनुजध्वंसे तस्य ते किमिवाद्भुतम्॥
 
-निगमान्तेषु निगदव्याख्यातनिजवैभवः।विधत्स्व विपदुत्तीर्णान् अमर्त्यान् अनुकम्पया ॥
+निगमान्तेषु निगदव्याख्यातनिजवैभवः।  
+विधत्स्व विपदुत्तीर्णान् अमर्त्यान् अनुकम्पया ॥
 
-इति विज्ञापितोदन्तं दत्तहस्तं बलद्विषम्।विनिवर्त्य जगन्नाथो वैनतेयमथास्मरत् ॥
+इति विज्ञापितोदन्तं दत्तहस्तं बलद्विषम्।  
+विनिवर्त्य जगन्नाथो वैनतेयमथास्मरत् ॥
 
-अनुचिन्तितमात्रस्तमुपतस्थे खगेश्वरः।अहीन्द्रदामभिर्भीमैरंसलम्बिभिरंसलः॥
+अनुचिन्तितमात्रस्तमुपतस्थे खगेश्वरः।  
+अहीन्द्रदामभिर्भीमैरंसलम्बिभिरंसलः॥
 
-पक्षमारुतघोषेण त्रैलोक्यदुरितच्छिदा।चतुर्णामिव वेदानां संभूतिमिव भावयन्॥
+पक्षमारुतघोषेण त्रैलोक्यदुरितच्छिदा।  
+चतुर्णामिव वेदानां संभूतिमिव भावयन्॥
 
-तरुणार्कप्रभासार सामरस्यजुषा त्विषा।तप्तहेमद्रवौघेन लिम्पन्निव दिशो दश॥
+तरुणार्कप्रभासार सामरस्यजुषा त्विषा।  
+तप्तहेमद्रवौघेन लिम्पन्निव दिशो दश॥
 
-स्वामुदर्शनसन्तोषात् प्रहृष्यद्भिस्तनूरुहैः।युगान्तसन्ध्याजलदः तटिज्जालैरिव ज्वलन्॥
+स्वामुदर्शनसन्तोषात् प्रहृष्यद्भिस्तनूरुहैः।  
+युगान्तसन्ध्याजलदः तटिज्जालैरिव ज्वलन्॥
 
-विपुलाद्भुतसंस्थानैर्द्योतितो दिव्यभूषणैः।भुजगेन्द्रफणारत्नशङ्कार्हमणिचित्रितैः॥
+विपुलाद्भुतसंस्थानैर्द्योतितो दिव्यभूषणैः।  
+भुजगेन्द्रफणारत्नशङ्कार्हमणिचित्रितैः॥
 
-तुङ्गवज्रव्रणाङ्केन सुविस्तीर्णेन वक्षसा।अबहिर्भावयन् कृत्स्नमवकाशं विहायसः॥
+तुङ्गवज्रव्रणाङ्केन सुविस्तीर्णेन वक्षसा।  
+अबहिर्भावयन् कृत्स्नमवकाशं विहायसः॥
 
-पृथुना भुजयुग्मेन भोगीन्द्रपरिकर्मणा।मन्दरद्वितयेनेव समेतो रुक्मपर्वतः॥
+पृथुना भुजयुग्मेन भोगीन्द्रपरिकर्मणा।  
+मन्दरद्वितयेनेव समेतो रुक्मपर्वतः॥
 
-व्यालखण्डनसङ्कान्तविषपङ्ककलङ्किना।दधान इव तुण्डेन दैत्यदर्पगजाङ्कुशम् ॥
+व्यालखण्डनसङ्कान्तविषपङ्ककलङ्किना।  
+दधान इव तुण्डेन दैत्यदर्पगजाङ्कुशम् ॥
 
-तक्षकश्रोणिसूत्रेण दृढबद्धेन बन्धुरम्।मान्यमग्रजवर्णेन वसानो दिव्यमम्बरम् ॥
+तक्षकश्रोणिसूत्रेण दृढबद्धेन बन्धुरम्।  
+मान्यमग्रजवर्णेन वसानो दिव्यमम्बरम् ॥
 
-नाथभक्तिपरिष्कार्यां नृत्तलीलामिव स्पृशन्।निजेन स्थानकेनाग्रे निहितोन्नतजानुना॥
+नाथभक्तिपरिष्कार्यां नृत्तलीलामिव स्पृशन्।  
+निजेन स्थानकेनाग्रे निहितोन्नतजानुना॥
 
-वपुषा भक्तिनम्रेण धीरोन्नतमहीयसा।शान्तवीराद्भुतरसान् समाहृत्येव संपतन्॥
+वपुषा भक्तिनम्रेण धीरोन्नतमहीयसा।  
+शान्तवीराद्भुतरसान् समाहृत्येव संपतन्॥
 
-मूर्तिमानिव संरम्भो रूपवानिव मारुतः।तरङ्गान् पक्षतीकृत्य संक्षिप्त इव सागरः॥
+मूर्तिमानिव संरम्भो रूपवानिव मारुतः।  
+तरङ्गान् पक्षतीकृत्य संक्षिप्त इव सागरः॥
 
-संवर्त इव नागानां सङ्घात इव रंहसाम्।वालखिल्यचरित्राणां विपाक इव जङ्गमः॥
+संवर्त इव नागानां सङ्घात इव रंहसाम्।  
+वालखिल्यचरित्राणां विपाक इव जङ्गमः॥
 
-प्रभुस्तं दैत्यसिद्धीनां प्रसूतकिलिकिञ्चितम्।ओलण्डितमिवापश्यदुग्रं समरताण्डवम्॥
+प्रभुस्तं दैत्यसिद्धीनां प्रसूतकिलिकिञ्चितम्।  
+ओलण्डितमिवापश्यदुग्रं समरताण्डवम्॥
 
-दत्तनीराजनस्तेन ददृशे वाहनेश्वरः।प्रदक्षिणीकृताः शश्वत् प्रतापविजयश्रिया ॥
+दत्तनीराजनस्तेन ददृशे वाहनेश्वरः।  
+प्रदक्षिणीकृताः शश्वत् प्रतापविजयश्रिया ॥
 
-स तदास्फोटयामास विन्ध्यमेरुसमौ भुजौ।रुद्रया च सुकीर्त्या च मृदितौ कण्ठभूषणैः॥
+स तदास्फोटयामास विन्ध्यमेरुसमौ भुजौ।  
+रुद्रया च सुकीर्त्या च मृदितौ कण्ठभूषणैः॥
 
-दुधुवे पक्षती च द्वे डोलायितकुलाचले।वीजयन् घोरदुर्वादिघर्मतप्तामिव त्रयीम् ॥
+दुधुवे पक्षती च द्वे डोलायितकुलाचले।  
+वीजयन् घोरदुर्वादिघर्मतप्तामिव त्रयीम् ॥
 
-मुहुराम्रेडयामास जयालोकयभारतीम्।मुग्धमध्यप्रगल्भाभिर्दशाभिः कर्बुरामिव ॥
+मुहुराम्रेडयामास जयालोकयभारतीम्।  
+मुग्धमध्यप्रगल्भाभिर्दशाभिः कर्बुरामिव ॥
 
-स तदा सन्नतस्कन्धो बद्धाञ्जलिरनिःश्वसन्।मुमुदे मूर्ध्नि संस्पृष्टो मुकुन्देन प्रसेदुषा॥
+स तदा सन्नतस्कन्धो बद्धाञ्जलिरनिःश्वसन्।  
+मुमुदे मूर्ध्नि संस्पृष्टो मुकुन्देन प्रसेदुषा॥
 
-तस्मिन् प्रथममारोप्य सत्यां विरहविक्लवाम्।आरुरोह ततः शौरिराखण्डलकृतस्तुतिः॥
+तस्मिन् प्रथममारोप्य सत्यां विरहविक्लवाम्।  
+आरुरोह ततः शौरिराखण्डलकृतस्तुतिः॥
 
-निवर्त्य स्वनिवासाय शक्रं शमितसाध्वसम्।प्रययौ दीप्तसन्नाहः प्राग्ज्योतिषपुरं प्रभुः॥
+निवर्त्य स्वनिवासाय शक्रं शमितसाध्वसम्।  
+प्रययौ दीप्तसन्नाहः प्राग्ज्योतिषपुरं प्रभुः॥
 
-श्रेयःपरिपणं तस्य श्रुतिश्रेणिशिरोमृतम्।प्रणतः प्रतिजग्राह शासनं पाकशासनः॥
+श्रेयःपरिपणं तस्य श्रुतिश्रेणिशिरोमृतम्।  
+प्रणतः प्रतिजग्राह शासनं पाकशासनः॥
 
-यथास्वं नगरद्वारे यादवा दानवाश्च तम्।तरस्विगरुडारूढं सत्यमैक्षन्त तत्क्षणम्॥
+यथास्वं नगरद्वारे यादवा दानवाश्च तम्।  
+तरस्विगरुडारूढं सत्यमैक्षन्त तत्क्षणम्॥
 
-समन्तात् वैरिदुर्गस्य क्षिप्तचक्रः क्षणेन सः।क्षुरान्तान् अनिच्छत् पाशान् आततान् शतयोजनम्॥
+समन्तात् वैरिदुर्गस्य क्षिप्तचक्रः क्षणेन सः।  
+क्षुरान्तान् अनिच्छत् पाशान् आततान् शतयोजनम्॥
 
-मुरं पञ्चजनं सप्तसहस्राणि मुरोद्भवान्।शलभीकृत्य चक्राग्निरुपदुद्राव तत् पुरम्॥
+मुरं पञ्चजनं सप्तसहस्राणि मुरोद्भवान्।  
+शलभीकृत्य चक्राग्निरुपदुद्राव तत् पुरम्॥
 
-ततः प्राग्ज्योतिषद्वारे दैत्यदानवसूदनः।पाञ्चजन्यमुपादध्मौ प्रलयाम्बुधिनिस्वनम्॥
+ततः प्राग्ज्योतिषद्वारे दैत्यदानवसूदनः।  
+पाञ्चजन्यमुपादध्मौ प्रलयाम्बुधिनिस्वनम्॥
 
-वीक्ष्य तं विविशुर्दुर्गं दिवाभीता इवासुराः।उद्यन्तमिव तिग्मांशुमुदयाद्रौ गरुत्मति ॥
+वीक्ष्य तं विविशुर्दुर्गं दिवाभीता इवासुराः।  
+उद्यन्तमिव तिग्मांशुमुदयाद्रौ गरुत्मति ॥
 
-अभिमानोदितव्यक्तिरहङ्कार इवोल्बणः।महतो दैत्यनगरान्निरगान्नरकासुरः॥
+अभिमानोदितव्यक्तिरहङ्कार इवोल्बणः।  
+महतो दैत्यनगरान्निरगान्नरकासुरः॥
 
-तमस्रमायाभ्यधिका दानवाः पर्यवारयन्।प्रकटच्छन्नकौटिल्याः पाषण्डमिव हैतुकाः॥
+तमस्रमायाभ्यधिका दानवाः पर्यवारयन्।  
+प्रकटच्छन्नकौटिल्याः पाषण्डमिव हैतुकाः॥
 
-संयुगे रजसोद्रिक्ते तस्मिन् सत्त्वतमस्त्विषोः।अर्थिप्रत्यर्थिनोरासीदनभिव्यक्तरुपता॥
+संयुगे रजसोद्रिक्ते तस्मिन् सत्त्वतमस्त्विषोः।  
+अर्थिप्रत्यर्थिनोरासीदनभिव्यक्तरुपता॥
 
-शरधारासहस्रेणच्छादयन् नरको दिशः।स्वहेतुमभिसंपेदे समुद्रमिव तोयदः॥
+शरधारासहस्रेणच्छादयन् नरको दिशः।  
+स्वहेतुमभिसंपेदे समुद्रमिव तोयदः॥
 
-नरकाम्बुदमुक्ताभिर्नाथो नाराचवृष्टिभिः।विपद्भिरिव तद्भक्तो विषमाभिर्न विव्यथे॥
+नरकाम्बुदमुक्ताभिर्नाथो नाराचवृष्टिभिः।  
+विपद्भिरिव तद्भक्तो विषमाभिर्न विव्यथे॥
 
-दृप्यतामथ दैत्यानां ध्वनिरुत्कम्पयन् दिवम्।पाञ्चजन्यप्रणादेन पर्यभूयत भूयसा॥
+दृप्यतामथ दैत्यानां ध्वनिरुत्कम्पयन् दिवम्।  
+पाञ्चजन्यप्रणादेन पर्यभूयत भूयसा॥
 
-दिदृक्षोपगतानां तत् देवानां रोमहर्षणम्।अदीव्यत रणद्यूतमन्तरस्थयशःपणम्।प्रतिविव्याध दैतेयं बाणैरशनिभीषणैः।पक्षवन्तमिवाद्रीन्द्रं प्रकुप्यन् पाकशासनः॥
+दिदृक्षोपगतानां तत् देवानां रोमहर्षणम्।  
+अदीव्यत रणद्यूतमन्तरस्थयशःपणम्।  
+प्रतिविव्याध दैतेयं बाणैरशनिभीषणैः।  
+पक्षवन्तमिवाद्रीन्द्रं प्रकुप्यन् पाकशासनः॥
 
-शरसंहतयस्तस्य क्षरन्त्यः शार्ङ्गशैलतः।द्विधा चक्रुः स्ववेगेन द्विषद्बलमहार्णवम्॥
+शरसंहतयस्तस्य क्षरन्त्यः शार्ङ्गशैलतः।  
+द्विधा चक्रुः स्ववेगेन द्विषद्बलमहार्णवम्॥
 
-तस्य ज्यास्वनगीतानि समयुज्यन्त संयुगे।करिणां कर्णतालैश्च कबन्धानां च ताण्डवैः॥
+तस्य ज्यास्वनगीतानि समयुज्यन्त संयुगे।  
+करिणां कर्णतालैश्च कबन्धानां च ताण्डवैः॥
 
-दैत्यशोणितदिग्धाभिस्तद्बाणततिभिर्नभः।रुरुधे रोषताम्राभिः कृतान्तस्येव दृष्टिभिः॥
+दैत्यशोणितदिग्धाभिस्तद्बाणततिभिर्नभः।  
+रुरुधे रोषताम्राभिः कृतान्तस्येव दृष्टिभिः॥
 
-द्विरदा शरनिर्भिन्नकुम्भनिर्मुक्तमौक्तिकाः।क्षरन्तः करकासारं कल्पमेघा इवाबभुः॥
+द्विरदा शरनिर्भिन्नकुम्भनिर्मुक्तमौक्तिकाः।  
+क्षरन्तः करकासारं कल्पमेघा इवाबभुः॥
 
-नासावालधिभिर्नागाः क्षरन्तो रक्तनिर्झरान्।शशंसुर्लाघवं तस्य निष्पत्राकृत सायकम् ॥
+नासावालधिभिर्नागाः क्षरन्तो रक्तनिर्झरान्।  
+शशंसुर्लाघवं तस्य निष्पत्राकृत सायकम् ॥
 
-अग्रिमं विशतां स्कन्धमामूलमहितां चमूम्।शराणां तस्य संधाननिपातौ न द्विषोविदुः॥
+अग्रिमं विशतां स्कन्धमामूलमहितां चमूम्।  
+शराणां तस्य संधाननिपातौ न द्विषोविदुः॥
 
-लक्ष्यमेकमभूत् तस्य शराणामुत्पलत्विषाम् । अमरस्त्रीकटाक्षाणामप्यभङ्गुरधन्वनः॥
+लक्ष्यमेकमभूत् तस्य शराणामुत्पलत्विषाम् ।  
+अमरस्त्रीकटाक्षाणामप्यभङ्गुरधन्वनः॥
 
-चिरप्रार्थितभीतानां स तासामेव शात्रवान्।स्वयंवरपतींश्चक्रे सुधन्वा सुरसुभ्रुवाम्॥
+चिरप्रार्थितभीतानां स तासामेव शात्रवान्।  
+स्वयंवरपतींश्चक्रे सुधन्वा सुरसुभ्रुवाम्॥
 
-त्यक्त्वा भीतिवृतांस्तत्र विमुक्तान् जीविताशया।सार्धमप्सरसः कीर्त्या वीरान् स्वयमवृण्वत॥
+त्यक्त्वा भीतिवृतांस्तत्र विमुक्तान् जीविताशया।  
+सार्धमप्सरसः कीर्त्या वीरान् स्वयमवृण्वत॥
 
-अनन्तस्य तदानन्तैरसुरैराहवोत्सवः।जयश्रियं च सत्यां च सम्मते समतोषयत् ॥
+अनन्तस्य तदानन्तैरसुरैराहवोत्सवः।  
+जयश्रियं च सत्यां च सम्मते समतोषयत् ॥
 
-स्वबाधनियतस्तत्र परबाधाभिलाषिणाम्।प्रयासः सुरशत्रूणां जात्युत्तरमिवाभवत्॥
+स्वबाधनियतस्तत्र परबाधाभिलाषिणाम्।  
+प्रयासः सुरशत्रूणां जात्युत्तरमिवाभवत्॥
 
-विसन्धिविग्रहाः क्षिप्तयानासनसमाश्रयाः।द्वैधीभावसृजो योधा दुर्नयस्था इवाभवन्॥
+विसन्धिविग्रहाः क्षिप्तयानासनसमाश्रयाः।  
+द्वैधीभावसृजो योधा दुर्नयस्था इवाभवन्॥
 
-अनघव्यवसायानामसङ्गत्यक्तवर्ष्मणाम्। योगिनामिव तत्रासीदपरावर्तनागतिः॥
+अनघव्यवसायानामसङ्गत्यक्तवर्ष्मणाम्।  
+योगिनामिव तत्रासीदपरावर्तनागतिः॥
 
-वनं तत्र मुकुन्देन त्याजितान् महती स्वयम्।अवृणोदनघा कीर्तिरधिविन्नाप्सरोगणान्॥
+वनं तत्र मुकुन्देन त्याजितान् महती स्वयम्।  
+अवृणोदनघा कीर्तिरधिविन्नाप्सरोगणान्॥
 
-निस्सहायीकृतस्तत्र शरवर्षैर्धरासुतः।बह्वमन्यत तेनैव द्वन्द्वयुद्धमुपस्थितम्॥
+निस्सहायीकृतस्तत्र शरवर्षैर्धरासुतः।  
+बह्वमन्यत तेनैव द्वन्द्वयुद्धमुपस्थितम्॥
 
-कृतप्रतिकृतैरस्त्रप्रयोगैः क्रीडतोस्तयोः।अदृष्टान्तमभूत् युद्धमन्यदृष्टान्तवर्जितम्॥
+कृतप्रतिकृतैरस्त्रप्रयोगैः क्रीडतोस्तयोः।  
+अदृष्टान्तमभूत् युद्धमन्यदृष्टान्तवर्जितम्॥
 
-वक्रवृत्तिः सरुधिरो लोहिताङ्गो महीसुतः।प्राप्य यादवभास्वन्तं मूढः समभवत् क्रमात्॥
+वक्रवृत्तिः सरुधिरो लोहिताङ्गो महीसुतः।  
+प्राप्य यादवभास्वन्तं मूढः समभवत् क्रमात्॥
 
-स्वायुधैकसहायस्तु देवः स्वच्छन्दयादवः।निरयापरपर्यायं रिपुं चक्रे निरायुधम् ॥
+स्वायुधैकसहायस्तु देवः स्वच्छन्दयादवः।  
+निरयापरपर्यायं रिपुं चक्रे निरायुधम् ॥
 
-क्रोधरक्ततनुर्दैत्यः क्षरच्छोणितनिर्झरः।गृहीतपादसञ्चारो गैरिकाद्रिरिवाबभौ॥
+क्रोधरक्ततनुर्दैत्यः क्षरच्छोणितनिर्झरः।  
+गृहीतपादसञ्चारो गैरिकाद्रिरिवाबभौ॥
 
-निशितैस्तस्य नाराचैर्निर्भिन्नरथसारथिः।आस्फोटितभुजस्तार्क्ष्यमजिघांसदमर्त्यजित्॥
+निशितैस्तस्य नाराचैर्निर्भिन्नरथसारथिः।  
+आस्फोटितभुजस्तार्क्ष्यमजिघांसदमर्त्यजित्॥
 
-निसर्गतमसस्तस्य जिह्मगस्याङ्गमुत्तमम्।रथपादेन चिच्छेद राहोरिव रमापतिः।उदतिष्ठत हाकारस्ततो युगपदेकधा देवदानवसौधेभ्यो हर्षशोकसमुद्भवः॥
+निसर्गतमसस्तस्य जिह्मगस्याङ्गमुत्तमम्।  
+रथपादेन चिच्छेद राहोरिव रमापतिः।  
+उदतिष्ठत हाकारस्ततो युगपदेकधा देवदानवसौधेभ्यो हर्षशोकसमुद्भवः॥
 
-स्फुरद्भ्रुकुटि दैत्यस्य रोषदष्टाधरं मुखम्।निकृत्तमपि न द्रष्टुं प्रबभूवुर्दिवौकसः॥
+स्फुरद्भ्रुकुटि दैत्यस्य रोषदष्टाधरं मुखम्।  
+निकृत्तमपि न द्रष्टुं प्रबभूवुर्दिवौकसः॥
 
-निकृत्तशिरसं देवी निजाङ्के पतितं सुतम्।महती मेदिनी दीनं कम्पमानान्वकम्पत॥
+निकृत्तशिरसं देवी निजाङ्के पतितं सुतम्।  
+महती मेदिनी दीनं कम्पमानान्वकम्पत॥
 
-अथ सा दैत्यहन्तारं प्रणम्य नतजीवितम्।अयाचत दयासिन्धुमात्मजस्य शुभां गतिम् ॥
+अथ सा दैत्यहन्तारं प्रणम्य नतजीवितम्।  
+अयाचत दयासिन्धुमात्मजस्य शुभां गतिम् ॥
 
-तुष्टाव च पतिं तुष्टा मेदिनी विश्ववेदिनी।स्नपयन्तीव संयत्तं दन्तदीधितिगङ्गया॥
+तुष्टाव च पतिं तुष्टा मेदिनी विश्ववेदिनी।  
+स्नपयन्तीव संयत्तं दन्तदीधितिगङ्गया॥
 
-अहमस्मि विभूतिस्ते भूतधात्री त्वया धृता।अशेषाधारमेकं त्वामनाधारमधीयते॥
+अहमस्मि विभूतिस्ते भूतधात्री त्वया धृता।  
+अशेषाधारमेकं त्वामनाधारमधीयते॥
 
-तिसृभिश्शक्तिभिर्युक्तं षाड्गुण्यप्रथितोदयम्।अधिराजमशेषस्य जगदुस्त्वां जिताहितम्॥
+तिसृभिश्शक्तिभिर्युक्तं षाड्गुण्यप्रथितोदयम्।  
+अधिराजमशेषस्य जगदुस्त्वां जिताहितम्॥
 
-अपि कोटिमुखैः सर्वैरनन्तेनाप्यनेहसा। नाथ त्वद्गुणदुग्धाब्धिपृषदास्वादनं क्षमम्॥
+अपि कोटिमुखैः सर्वैरनन्तेनाप्यनेहसा।  
+नाथ त्वद्गुणदुग्धाब्धिपृषदास्वादनं क्षमम्॥
 
-अकर्तुमन्यथाकर्तुं कर्तुमप्यखिलं क्षमम्।लक्ष्मीलक्षणमाहुस्त्वां लङ्घितत्रिविधावधिम्॥
+अकर्तुमन्यथाकर्तुं कर्तुमप्यखिलं क्षमम्।  
+लक्ष्मीलक्षणमाहुस्त्वां लङ्घितत्रिविधावधिम्॥
 
-स्थिरत्रसविभक्तं ते चिदचिद्भेदचित्रितम्।स्वसृष्टमिदमुद्यानं त्वदन्यो नास्ति रक्षितुम्॥
+स्थिरत्रसविभक्तं ते चिदचिद्भेदचित्रितम्।  
+स्वसृष्टमिदमुद्यानं त्वदन्यो नास्ति रक्षितुम्॥
 
-स्वातन्त्र्यपरतन्त्रस्त्वं पारतन्त्र्यस्वतन्त्रितैः।विहरस्यात्मसूत्रस्थैः शकुनैरिव जन्तुभिः॥
+स्वातन्त्र्यपरतन्त्रस्त्वं पारतन्त्र्यस्वतन्त्रितैः।  
+विहरस्यात्मसूत्रस्थैः शकुनैरिव जन्तुभिः॥
 
-सितासितगुणारब्धैः पाशजालैर्दुरत्ययैः।निबद्धाः पशवो नाथ त्वदेकाधीनमुक्तयः॥
+सितासितगुणारब्धैः पाशजालैर्दुरत्ययैः।  
+निबद्धाः पशवो नाथ त्वदेकाधीनमुक्तयः॥
 
-यस्य त्वं यश्च हृद्यस्ते यस्यासौ तस्य यस्तथा।नाथ त्वत्पदमारुह्य न पुनस्तैर्निवृत्यते॥
+यस्य त्वं यश्च हृद्यस्ते यस्यासौ तस्य यस्तथा।  
+नाथ त्वत्पदमारुह्य न पुनस्तैर्निवृत्यते॥
 
-सुरासुरविभागोयं तुलाग्रन्यायतस्त्वया।कल्पितः कालपर्यायान्निम्नोतसमक्रमः॥
+सुरासुरविभागोयं तुलाग्रन्यायतस्त्वया।  
+कल्पितः कालपर्यायान्निम्नोतसमक्रमः॥
 
-कस्त्वदङ्गीकृतं हन्ता कस्त्राता त्वज्जिघांसितम्।निहन्सि पासि चैकस्त्वं स्वेन विश्वंपरेण वा॥
+कस्त्वदङ्गीकृतं हन्ता कस्त्राता त्वज्जिघांसितम्।  
+निहन्सि पासि चैकस्त्वं स्वेन विश्वंपरेण वा॥
 
-वृद्धिसङ्कोचविषमा गतागतसहायिनी।नियतिः केन लङ्घ्येत निजच्छायानुकारिणी॥
+वृद्धिसङ्कोचविषमा गतागतसहायिनी।  
+नियतिः केन लङ्घ्येत निजच्छायानुकारिणी॥
 
-नपुत्रवधमन्वीक्ष्य न दूये त्वन्मतस्थिता।न च पुत्राभिमानो मे मत्प्रसूतेषु जन्तुषु॥
+नपुत्रवधमन्वीक्ष्य न दूये त्वन्मतस्थिता।  
+न च पुत्राभिमानो मे मत्प्रसूतेषु जन्तुषु॥
 
-सूदने कृतसङ्कल्पः स्वभक्तपरिपन्थिनाम्।यदि तीर्णप्रतिज्ञस्त्वं किं मयेदं न मृष्यते॥
+सूदने कृतसङ्कल्पः स्वभक्तपरिपन्थिनाम्।  
+यदि तीर्णप्रतिज्ञस्त्वं किं मयेदं न मृष्यते॥
 
-त्वन्मायाजृम्भितैर्देव ब्रह्माण्डैरपि लीयते।जन्मन्यपि सुरोधेषु जन्तुवर्गेषु का कथा॥
+त्वन्मायाजृम्भितैर्देव ब्रह्माण्डैरपि लीयते।  
+जन्मन्यपि सुरोधेषु जन्तुवर्गेषु का कथा॥
 
-त्वत्प्रसूतस्त्वयैवासौ वधितश्चक्रधारया।का नाम कृतिनस्तस्य परिदेवयितव्यता ॥
+त्वत्प्रसूतस्त्वयैवासौ वधितश्चक्रधारया।  
+का नाम कृतिनस्तस्य परिदेवयितव्यता ॥
 
-निरुद्धे नरके नाथ नित्यधर्मात्मना त्वया।निष्प्रतिद्वन्द्विकं स्वर्गसुखमास्वाद्यतां सुरैः॥
+निरुद्धे नरके नाथ नित्यधर्मात्मना त्वया।  
+निष्प्रतिद्वन्द्विकं स्वर्गसुखमास्वाद्यतां सुरैः॥
 
-निर्यातितमिदं भूयः त्वज्जनन्यै मया स्वयम्।श्रवणाभरणद्वन्द्वं शीतलार्कयुगप्रभम्॥
+निर्यातितमिदं भूयः त्वज्जनन्यै मया स्वयम्।  
+श्रवणाभरणद्वन्द्वं शीतलार्कयुगप्रभम्॥
 
-इति विज्ञाप्य सा तस्मै विषादाभावमात्मनः। विरराम ततो देवी विलक्षा विश्वधारिणी॥
+इति विज्ञाप्य सा तस्मै विषादाभावमात्मनः।  
+विरराम ततो देवी विलक्षा विश्वधारिणी॥
 
-तामशेषजगद्धात्रीं संनताङ्गीमसान्त्वयत्।सहधर्मचरीं पूर्वां वासुदेवो वसुन्धराम् ॥
+तामशेषजगद्धात्रीं संनताङ्गीमसान्त्वयत्।  
+सहधर्मचरीं पूर्वां वासुदेवो वसुन्धराम् ॥
 
-पुरस्कृतप्रसादस्तां पूर्वसम्भवगेहिनीम्।गृहीतकुण्डलो गन्तुमन्वमंस्त गदाग्रजः॥
+पुरस्कृतप्रसादस्तां पूर्वसम्भवगेहिनीम्।  
+गृहीतकुण्डलो गन्तुमन्वमंस्त गदाग्रजः॥
 
-ततः सा तत्समादेशात् सत्यभामाभिवन्दिता।रम्यं प्रतिययौ स्थानं रत्नसानुशिखण्डकम्॥
+ततः सा तत्समादेशात् सत्यभामाभिवन्दिता।  
+रम्यं प्रतिययौ स्थानं रत्नसानुशिखण्डकम्॥
 
-ददर्श यदुवीरोथ दैत्यवीरनिवेशनम्। अचिन्त्यमिव मायानां प्रभावमनुपप्लवम्॥
+ददर्श यदुवीरोथ दैत्यवीरनिवेशनम्।  
+अचिन्त्यमिव मायानां प्रभावमनुपप्लवम्॥
 
-विचक्षणवरं दैत्यं वैरिसंपत्करग्रहे। विभूतिसंचयप्रेक्षी बह्वमंस्त बलानुजः॥
+विचक्षणवरं दैत्यं वैरिसंपत्करग्रहे।  
+विभूतिसंचयप्रेक्षी बह्वमंस्त बलानुजः॥
 
-सुधानिष्यन्दिभिः स्थूलैः मुक्तादामभिरावृतम्।पश्यन् पाशभृतश्छत्रं विश्वकर्ता विसिष्मिये॥
+सुधानिष्यन्दिभिः स्थूलैः मुक्तादामभिरावृतम्।  
+पश्यन् पाशभृतश्छत्रं विश्वकर्ता विसिष्मिये॥
 
-विदध्यौ कन्यकास्तत्र निदर्शितपरस्पराः।अमुद्राभङ्गसुभगा नीवीरिव रतेः शुभः॥
+विदध्यौ कन्यकास्तत्र निदर्शितपरस्पराः।  
+अमुद्राभङ्गसुभगा नीवीरिव रतेः शुभः॥
 
-लावण्यजलधौ लक्ष्म्याश्छाया इव सहोदिताः।मधुस्वच्छन्दतासीम्नो मान्मथीरिव दीर्घिकाः॥
+लावण्यजलधौ लक्ष्म्याश्छाया इव सहोदिताः।  
+मधुस्वच्छन्दतासीम्नो मान्मथीरिव दीर्घिकाः॥
 
-कामकीर्तिपताकाभिः स ताभिः प्रत्यवेक्षितः। आत्मानममृतोदन्वदन्तस्स्थितममन्यत॥
+कामकीर्तिपताकाभिः स ताभिः प्रत्यवेक्षितः।  
+आत्मानममृतोदन्वदन्तस्स्थितममन्यत॥
 
-सुप्रभातमभूत् तासां सुदिनं च तमोपहम्।भवदोषार्यमा यासां देवो दृष्टिपथे गतः॥
+सुप्रभातमभूत् तासां सुदिनं च तमोपहम्।  
+भवदोषार्यमा यासां देवो दृष्टिपथे गतः॥
 
-रत्नशैलनिभांस्तस्य भुजान् कटकभूषितान्।उपधास्यन्ति यास्तासां श्रेयसी भवितव्यता॥
+रत्नशैलनिभांस्तस्य भुजान् कटकभूषितान्।  
+उपधास्यन्ति यास्तासां श्रेयसी भवितव्यता॥
 
-सर्वस्वमिव पुण्यानां साम्राज्यमिव संपदाम्।समाजमिव सिद्धीनां स तद्यौवतमग्रहीत्॥
+सर्वस्वमिव पुण्यानां साम्राज्यमिव संपदाम्।  
+समाजमिव सिद्धीनां स तद्यौवतमग्रहीत्॥
 
-भुजमन्दरवेगेन चक्रभ्रमवता विभुः। मथितान् दानवाम्भोधेरमृतं तदविन्दत ॥
+भुजमन्दरवेगेन चक्रभ्रमवता विभुः।  
+मथितान् दानवाम्भोधेरमृतं तदविन्दत ॥
 
 मणिपरुवकसंपन्माननीयस्तनीनां मनसिजवपुषेव स्वेन सङ्कल्पितानाम्।   
 सकलजगदभिख्यासारसीम्नां स तासां स्वयमजुषत सिद्धिं स्वप्रसादप्रसूताम्॥
