--- a/laxyam/padyam/shrIvaiShNava-kRtam/venkaTanAthaH/yAdavAbhyudayam/17.md
+++ b/laxyam/padyam/shrIvaiShNava-kRtam/venkaTanAthaH/yAdavAbhyudayam/17.md
@@ -1,5 +1,5 @@
 +++
-title = "17 सर्गः-17"
+title = "17"
 
 +++
 आतपत्रमथ तत् प्रचेतसो मन्दरस्य मणिशृङ्गमुन्नतम्।   
@@ -207,7 +207,8 @@ title = "17 सर्गः-17"
 सद्भिरेव विबुधैरसत्समा कापि दुर्ग्रहदशान्वभूयत ॥
 
 अष्टभिश्च हरितामधीश्वरैरर्यमप्रभृतिभिश्च संहतैः।   
-वृष्णिवीरशरखण्डतायुधैर्विह्वलैरजनि वीतशक्तिभिः।अक्रमात् दश दिशोवलोकयन् दत्तदृष्टिरभितः क्रमात् वृषा।   
+वृष्णिवीरशरखण्डतायुधैर्विह्वलैरजनि वीतशक्तिभिः।  
+अक्रमात् दश दिशोवलोकयन् दत्तदृष्टिरभितः क्रमात् वृषा।   
 स्रस्तकार्मुकशिरस्त्रकञ्चुकां प्रेक्ष्य देवपृतनामदूयत॥
 
 अस्त्रशस्त्रविनिपातमोहितान् अर्दितान् असुरवैरिसायकैः।   
@@ -247,7 +248,8 @@ title = "17 सर्गः-17"
 पुष्यति स्म मकरन्दमेदुरं पुष्पवर्षममृतोग्भवस्तरुः॥
 
 इत्यनाकलितपूर्वसत्कृतिं वृक्षमात्रकलहोल्बणं विभुः।   
-निर्जिगाय मिषतां दिवौकसां आत्तशस्त्रममरावतीश्वरम्।दीप्यमानमनघेन ताजसा देवकीसुतमवेक्ष्य देवताः।   
+निर्जिगाय मिषतां दिवौकसां आत्तशस्त्रममरावतीश्वरम्।  
+दीप्यमानमनघेन ताजसा देवकीसुतमवेक्ष्य देवताः।   
 अस्त्रजालमवधूय सिद्धिदान् अञ्जलीन् अबिभरुः कराम्बुजैः॥
 
 सोथ संयति पलायनोन्मुखः पाकशील इव पाकशासनः।   
@@ -287,7 +289,8 @@ title = "17 सर्गः-17"
 मानितोहमवमानितः स्वयं वानरानुचरितैः स्वचेष्टितैः॥
 
 मद्विधा विषमवृत्तिशालिनः शान्तघोरसमयातिलङ्घिनः।   
-पोषयन्ति भवतः क्षमानिधेः प्रायशः प्रहसनोचितं रसम् ।अस्मदिष्टमनघास्त्रिविष्टपं दुःखमिश्रमवधार्य दुर्गतिम्।   
+पोषयन्ति भवतः क्षमानिधेः प्रायशः प्रहसनोचितं रसम् ।  
+अस्मदिष्टमनघास्त्रिविष्टपं दुःखमिश्रमवधार्य दुर्गतिम्।   
 त्वत्पदं परमनन्यचेतसः संश्रयन्ति निरपायमाश्रयम् ॥
 
 अल्पमस्थिरमपायदन्तुरं स्वर्गसौधमवधीर्य सूरयः।   
