--- a/laxyam/padyam/shrIvaiShNava-kRtam/venkaTanAthaH/yAdavAbhyudayam/18.md
+++ b/laxyam/padyam/shrIvaiShNava-kRtam/venkaTanAthaH/yAdavAbhyudayam/18.md
@@ -1,5 +1,5 @@
 +++
-title = "18 सर्गः-18"
+title = "18"
 
 +++
 अथात्मचिन्तानुचरेण यास्यन् विहङ्गराजेन विभुः पुरीं स्वाम् ।   
@@ -252,7 +252,8 @@ title = "18 सर्गः-18"
 अमुष्य वेला धृतवेपथुस्ते वैवाहिकीं स्मारयति स्म वेलाम् ॥
 
 स्वसम्भवं सम्प्रति पारिजातं दृष्ट्वा चिरप्रोषितसंनिवृत्तम् ।   
-आलिङ्गनार्थीव तरङ्गहस्तान् आविर्मणीन् उन्नमयत्युदन्वान् ।अहीन्द्रनिश्वासमरुत्प्रणुन्नैरावर्तसम्भेदिभिरेष फेनैः।   
+आलिङ्गनार्थीव तरङ्गहस्तान् आविर्मणीन् उन्नमयत्युदन्वान् ।  
+अहीन्द्रनिश्वासमरुत्प्रणुन्नैरावर्तसम्भेदिभिरेष फेनैः।   
 उपायनं दित्सुरिवाम्बुधिस्ते मुक्तातपत्राणि मुहुः प्रसूते ॥
 
 वेलाचलादर्भकपञ्चवक्त्रान् विहङ्गपातेन जिघृक्षमाणान्।   
@@ -384,7 +385,8 @@ title = "18 सर्गः-18"
 अमी पुरस्तात् भवतीसखीनामन्तर्मुदामञ्जलयः स्वदन्ते ॥
 
 मायाधिकेन विधिना मनसेव सृष्टैराभाति यादवगृहैरनघा पुरीयम् ।   
-नाभागनाहुषनलादिनराधिपानामाजानसम्पदपहासमिवादधानैः।नित्यं धनेशनगरीं निधिभिः प्रभूतामाखण्डलेन महिताममरावतीं च ।   
+नाभागनाहुषनलादिनराधिपानामाजानसम्पदपहासमिवादधानैः।  
+नित्यं धनेशनगरीं निधिभिः प्रभूतामाखण्डलेन महिताममरावतीं च ।   
 प्रत्येकधामविभवैः परिभूय दृप्ता सौधैरियं प्रहसतीव सुधावदातैः॥
 
 इत्यालपन्तमथ तार्क्ष्यरथेन कृष्णे हेमाद्रिणा हरितशैलमिवोपनीतम् ।   
