--- a/laxyam/padyam/shrIvaiShNava-kRtam/venkaTanAthaH/yAdavAbhyudayam/19.md
+++ b/laxyam/padyam/shrIvaiShNava-kRtam/venkaTanAthaH/yAdavAbhyudayam/19.md
@@ -1,5 +1,5 @@
 +++
-title = "19 सर्गः-19"
+title = "19"
 
 +++
 नित्यप्रबुद्धमपि निर्मलया स्वदृष्ट्या निद्राणवत् दरनिमीलितनेत्रपद्मम्।   
@@ -60,7 +60,8 @@ title = "19 सर्गः-19"
 रागोत्तरां श्रियमवाप्य रथाङ्गशोभी जातः स एष समयो जगदेकसेव्यः॥
 
 नीतः श्रमं निहतरात्रिवरूथिनीकः चन्द्रातपत्रविनिपातविलुप्तभूमा ।   
-प्रत्यूषवैरिविभवेन पराहतात्मा कालप्रतीक्ष इव गच्छति कामवीरः।योसौ जनस्य दिशतीव सुधानिधानं जातध्वनिः श्रुतिषु जागरदुन्दुभिस्ते।   
+प्रत्यूषवैरिविभवेन पराहतात्मा कालप्रतीक्ष इव गच्छति कामवीरः।  
+योसौ जनस्य दिशतीव सुधानिधानं जातध्वनिः श्रुतिषु जागरदुन्दुभिस्ते।   
 मन्ये स एव मदनस्य निशाचरस्य स्वच्छन्दसौप्तिकनिवृत्तिमभिव्यनक्ति ॥
 
 अन्तर्बहिश्च तमसा परिमुच्यमाने जागर्यया जगति सम्प्रति दीप्यमाने ।   
