--- a/laxyam/padyam/shrIvaiShNava-kRtam/venkaTanAthaH/yAdavAbhyudayam/22.md
+++ b/laxyam/padyam/shrIvaiShNava-kRtam/venkaTanAthaH/yAdavAbhyudayam/22.md
@@ -1,318 +1,476 @@
 +++
-title = "22 सर्गः-22"
+title = "22"
 
 +++
-अथ देवानिवाहूतान् नरदेवान् अभाषत। देवदानवसामान्यदैवतं देवकीसुतः॥
+अथ देवानिवाहूतान् नरदेवान् अभाषत।  
+देवदानवसामान्यदैवतं देवकीसुतः॥
 
-एष वः क्ष्मापतिः शास्ति विधातेव प्रजापतीन्। महेन्द्रः हव धर्मेण सुधर्मामास्थितः स्वयम्॥
+एष वः क्ष्मापतिः शास्ति विधातेव प्रजापतीन्।  
+महेन्द्रः हव धर्मेण सुधर्मामास्थितः स्वयम्॥
 
-शेखरीकृतभूभारः शेषत्वेन विभोः स्थितः। वेदयत्ययमार्योपि मित्रभूतान् अमित्रजित् ॥
+शेखरीकृतभूभारः शेषत्वेन विभोः स्थितः।  
+वेदयत्ययमार्योपि मित्रभूतान् अमित्रजित् ॥
 
-वयं भवन्तो ये चान्ये महान्तः सर्व एव ते । विश्वगुप्तौ जगत्कर्त्रा विनियुक्ता विभूतयः॥
+वयं भवन्तो ये चान्ये महान्तः सर्व एव ते ।  
+विश्वगुप्तौ जगत्कर्त्रा विनियुक्ता विभूतयः॥
 
-तदस्माभिरवस्थेयं धर्मवर्त्मनि शाश्वते।बिभ्यद्भिरनघादेशात् वज्रादिव समुद्यतात् ॥
+तदस्माभिरवस्थेयं धर्मवर्त्मनि शाश्वते।  
+बिभ्यद्भिरनघादेशात् वज्रादिव समुद्यतात् ॥
 
-द्विषन्तः ख्यातनामानो नामशेषास्तथाप्यसौ।समुद्रवसना विष्वक् तामसैरवकुण्ठिता ॥
+द्विषन्तः ख्यातनामानो नामशेषास्तथाप्यसौ।  
+समुद्रवसना विष्वक् तामसैरवकुण्ठिता ॥
 
-अंसकस्तूरिका भूमिर्भवतां बीहुशालिनाम् । अजुगुप्सापदं न स्यादसद्वृत्तिमलीमसा ॥
+अंसकस्तूरिका भूमिर्भवतां बीहुशालिनाम् ।  
+अजुगुप्सापदं न स्यादसद्वृत्तिमलीमसा ॥
 
-शङ्कितप्रचयः शेषः शत्रूणां शुष्मणामिव।आयतौ सुखमिच्छद्भिर्न युक्तः क्षन्तुमीश्वरः॥
+शङ्कितप्रचयः शेषः शत्रूणां शुष्मणामिव।  
+आयतौ सुखमिच्छद्भिर्न युक्तः क्षन्तुमीश्वरः॥
 
-अतस्त्राणाय साधूनां दुष्कृतां दमनं क्षमम् । कडङ्करीयरोधो हि कलमोत्सेधकारणम्॥
+अतस्त्राणाय साधूनां दुष्कृतां दमनं क्षमम् ।  
+कडङ्करीयरोधो हि कलमोत्सेधकारणम्॥
 
-पुष्यतां पाण्डरं छत्रं पुण्डरीकमुव श्रियः। धर्मोधर्मश्च नान्योस्ति रक्षणोपेक्षणे भुवः॥
+पुष्यतां पाण्डरं छत्रं पुण्डरीकमुव श्रियः।  
+धर्मोधर्मश्च नान्योस्ति रक्षणोपेक्षणे भुवः॥
 
-पूर्वपूर्वनरेन्द्राणामुच्छिष्टमपि मेदिनी । सोमपीथिनयात् ग्राह्या स्वधर्माध्वरमास्थितैः॥
+पूर्वपूर्वनरेन्द्राणामुच्छिष्टमपि मेदिनी ।  
+सोमपीथिनयात् ग्राह्या स्वधर्माध्वरमास्थितैः॥
 
-अविवेकविभावर्यां धर्ममार्गमपङ्किलम्।द्रष्टुं दीप इव न्यस्तो नायकेन नयागमः॥
+अविवेकविभावर्यां धर्ममार्गमपङ्किलम्।  
+द्रष्टुं दीप इव न्यस्तो नायकेन नयागमः॥
 
-अवलम्ब्य जगद्धातुर्हस्तमागमविग्रहम् । स्वयमुद्धरतात्मानं स्वैरं पातालपातिनम् ॥
+अवलम्ब्य जगद्धातुर्हस्तमागमविग्रहम् ।  
+स्वयमुद्धरतात्मानं स्वैरं पातालपातिनम् ॥
 
-व्यसनासारवेगानां वारणं न प्रकल्पते।उपदेशैरनार्याणामुत्तानच्छत्रसन्निभैः॥
+व्यसनासारवेगानां वारणं न प्रकल्पते।  
+उपदेशैरनार्याणामुत्तानच्छत्रसन्निभैः॥
 
-पण्डितप्रहतेनैव सत्पथेन सदोदिताः।विषमेषु स्खलन्तोपि न दुर्गतिमवाप्स्यथ॥
+पण्डितप्रहतेनैव सत्पथेन सदोदिताः।  
+विषमेषु स्खलन्तोपि न दुर्गतिमवाप्स्यथ॥
 
-भूपरिक्रमणादन्या भवतामतिभास्वताम् । तमसामिव शत्रूणां निरासे कीदृशी क्रिया ॥
+भूपरिक्रमणादन्या भवतामतिभास्वताम् ।  
+तमसामिव शत्रूणां निरासे कीदृशी क्रिया ॥
 
-जिगीषूणां च युष्माकं न जेतव्यपदे स्थितम् । कौरवैरनुकूलानां विपाकैरिव कर्मणाम्॥
+जिगीषूणां च युष्माकं न जेतव्यपदे स्थितम् ।  
+कौरवैरनुकूलानां विपाकैरिव कर्मणाम्॥
 
-अवरोध्याः स्वयं दक्षैरक्षिपद्भिरनेहसम्।करिणां कर्णडोलाभिः कम्पिता इव सम्पदः॥
+अवरोध्याः स्वयं दक्षैरक्षिपद्भिरनेहसम्।  
+करिणां कर्णडोलाभिः कम्पिता इव सम्पदः॥
 
-नीतिपद्धतिरक्षोभ्या भवद्भिरधिगम्यताम् । नियता स्वर्गसौधस्य निश्श्रेणिरिव शाश्वती॥
+नीतिपद्धतिरक्षोभ्या भवद्भिरधिगम्यताम् ।  
+नियता स्वर्गसौधस्य निश्श्रेणिरिव शाश्वती॥
 
-खलत्यागः सुहृत्प्राप्तिरितीदं कवचद्वयम् । वहध्वं मन्त्रदेहस्य भेदं परिजिहीर्षवः॥
+खलत्यागः सुहृत्प्राप्तिरितीदं कवचद्वयम् ।  
+वहध्वं मन्त्रदेहस्य भेदं परिजिहीर्षवः॥
 
-धातुनामिव कोपेषु प्रकृतीनामचेतसाम् । पातुमर्हथ पर्याप्तं प्रसादनरसायनम् ॥
+धातुनामिव कोपेषु प्रकृतीनामचेतसाम् ।  
+पातुमर्हथ पर्याप्तं प्रसादनरसायनम् ॥
 
-अनीतिमदिरां त्यक्त्वा लोभादिविषदूषिताम् । अगदङ्कारमादद्ध्वं प्रज्ञामृतमनुत्तमम्॥
+अनीतिमदिरां त्यक्त्वा लोभादिविषदूषिताम् ।  
+अगदङ्कारमादद्ध्वं प्रज्ञामृतमनुत्तमम्॥
 
-लुलिताशेषसन्मार्गं लोकवेदविरोधिनम्। परित्यजत दुर्मानं पाषण्डमतजीवितम् ॥
+लुलिताशेषसन्मार्गं लोकवेदविरोधिनम्।  
+परित्यजत दुर्मानं पाषण्डमतजीवितम् ॥
 
-गुणशैलाग्रमारोप्य शनैरात्मानमात्नमा। नित्यशङ्कितविभ्रंशं निध्यायत शुभंयवः॥
+गुणशैलाग्रमारोप्य शनैरात्मानमात्नमा।  
+नित्यशङ्कितविभ्रंशं निध्यायत शुभंयवः॥
 
-त्रिविधानु विधेयानि सम्पत्सु च विपत्सु च । करणानीव मित्राणि गोपायत गुणग्रहात्॥
+त्रिविधानु विधेयानि सम्पत्सु च विपत्सु च ।  
+करणानीव मित्राणि गोपायत गुणग्रहात्॥
 
-अप्रशान्तेषु विस्रम्भमतिशङ्कां सुहृत्सु च। नीतिसंद्शिना ऋद्धेः समुद्धरत कण्टकौ॥
+अप्रशान्तेषु विस्रम्भमतिशङ्कां सुहृत्सु च।  
+नीतिसंद्शिना ऋद्धेः समुद्धरत कण्टकौ॥
 
-सपञ्चाङ्गेन मन्त्रेणच नीतिमाहात्म्यनिर्विषाम्। नियच्छत निजाङ्गेषु भुजङ्गीमिव सम्पदम् ॥
+सपञ्चाङ्गेन मन्त्रेणच नीतिमाहात्म्यनिर्विषाम्।  
+नियच्छत निजाङ्गेषु भुजङ्गीमिव सम्पदम् ॥
 
-अवधीरयताधर्म्यामर्थकामैकसाधिकाम्। नृशंसप्रेयसीं नीतिं नारीहृदयदारुणाम्॥
+अवधीरयताधर्म्यामर्थकामैकसाधिकाम्।  
+नृशंसप्रेयसीं नीतिं नारीहृदयदारुणाम्॥
 
-प्रमादसप्तकं त्यक्त्वा प्रबुध्योपायसप्तकम् । अङ्गसप्तकसम्पत्त्या जयत द्वीपसप्तकम्।अरातिगणकूटस्थान् आदौ जयत दुर्जयान्। अपदक्रोधलोभादीन् अशेषार्थविरोधिनः॥
+प्रमादसप्तकं त्यक्त्वा प्रबुध्योपायसप्तकम् ।  
+अङ्गसप्तकसम्पत्त्या जयत द्वीपसप्तकम्।  
+अरातिगणकूटस्थान् आदौ जयत दुर्जयान्।  
+अपदक्रोधलोभादीन् अशेषार्थविरोधिनः॥
 
-आन्तरेण बलेनैव द्विविधां वहत क्षमाम्। यस्य सत्वेप्यसत्त्वेपि गतार्थं षड्विधं बलम्॥
+आन्तरेण बलेनैव द्विविधां वहत क्षमाम्।  
+यस्य सत्वेप्यसत्त्वेपि गतार्थं षड्विधं बलम्॥
 
-न शापो नाभिचरणं न वह्निर्न विषं तथा ।नास्त्राणि न च शस्त्राणि यथा तीक्ष्णतमा क्षमा॥
+न शापो नाभिचरणं न वह्निर्न विषं तथा ।  
+नास्त्राणि न च शस्त्राणि यथा तीक्ष्णतमा क्षमा॥
 
-विपक्षजातिभाजोपि क्षुद्रान् अनपकुर्वतः।सुपर्ण इव भूनागान् उपेक्षध्वं तरस्विनः॥
+विपक्षजातिभाजोपि क्षुद्रान् अनपकुर्वतः।  
+सुपर्ण इव भूनागान् उपेक्षध्वं तरस्विनः॥
 
-कृपणान् क्षममाणेपि महासत्त्वो न दैन्यभाक् । मृगेन्द्र इव भिन्नेभः स्वदंष्ट्रालेहिनः खगान्॥
+कृपणान् क्षममाणेपि महासत्त्वो न दैन्यभाक् ।  
+मृगेन्द्र इव भिन्नेभः स्वदंष्ट्रालेहिनः खगान्॥
 
-देवान् अतिशयानानां दैत्यदानवरक्षसाम्। विनिपादनिदानानि स्वयमन्वीक्ष्य सुख्यत॥
+देवान् अतिशयानानां दैत्यदानवरक्षसाम्।  
+विनिपादनिदानानि स्वयमन्वीक्ष्य सुख्यत॥
 
-यशः प्राणहरान् घोरान् व्यामोहविषपादपान्। समीक्षाशाणघृष्टेन द्यत शास्त्रेण शस्त्रिणः॥
+यशः प्राणहरान् घोरान् व्यामोहविषपादपान्।  
+समीक्षाशाणघृष्टेन द्यत शास्त्रेण शस्त्रिणः॥
 
-श्रुतशीलिभिरुक्तानि दुरुत्सेकज्वरातुराः।अप्रियाण्यपि पथ्यानि मा जिहासत जातुचित् ॥
+श्रुतशीलिभिरुक्तानि दुरुत्सेकज्वरातुराः।  
+अप्रियाण्यपि पथ्यानि मा जिहासत जातुचित् ॥
 
-कलिसन्धिसमाघ्रातं त्यजन्तः कर्म कर्बुरम्।सदसत्प्रेक्षणे स्यात सर्वतो दत्तदृष्टयः॥
+कलिसन्धिसमाघ्रातं त्यजन्तः कर्म कर्बुरम्।  
+सदसत्प्रेक्षणे स्यात सर्वतो दत्तदृष्टयः॥
 
-पल्लवोपमकौमारे प्रसूनोपमयौवने। स्थिरं फलमुपादद्ध्वं जङ्गमे जीवितद्रुमे ॥
+पल्लवोपमकौमारे प्रसूनोपमयौवने।  
+स्थिरं फलमुपादद्ध्वं जङ्गमे जीवितद्रुमे ॥
 
-मिषतां मीलतां वापि द्रुतं धावति जीविते। अनघं तनुत क्षेम्यमान्तरं धनमक्षयम् ॥
+मिषतां मीलतां वापि द्रुतं धावति जीविते।  
+अनघं तनुत क्षेम्यमान्तरं धनमक्षयम् ॥
 
-अकालनियतोच्छ्रायमतिसूर्येन्दुपावकम्।क्षात्त्रं क्षपितजाड्यं वः क्षमं तेजः समेधितुम्॥
+अकालनियतोच्छ्रायमतिसूर्येन्दुपावकम्।  
+क्षात्त्रं क्षपितजाड्यं वः क्षमं तेजः समेधितुम्॥
 
-असम्पलावितसप्ताब्धिरत्रिलोकीतमोपहा।अदिक्सूतसुधालिप्तिर्यस्य कीर्तिः स किंप्रभुः॥
+असम्पलावितसप्ताब्धिरत्रिलोकीतमोपहा।  
+अदिक्सूतसुधालिप्तिर्यस्य कीर्तिः स किंप्रभुः॥
 
-सुधां सुमनसे यस्य स्वादयन्ति यशोमयीम् । स राजा वृद्धिमाप्नोति क्षीयते न च कालतः॥
+सुधां सुमनसे यस्य स्वादयन्ति यशोमयीम् ।  
+स राजा वृद्धिमाप्नोति क्षीयते न च कालतः॥
 
-त्यक्तसान्त्वेन कठिनान् विद्रावयत तेजसा।अयसस्तापसेकाभ्यामवस्था कीदृशी भवेत्॥
+त्यक्तसान्त्वेन कठिनान् विद्रावयत तेजसा।  
+अयसस्तापसेकाभ्यामवस्था कीदृशी भवेत्॥
 
-प्रसातधितदिशो युष्मान् विमुक्तान्यमहीभृतः।सम्पदः प्रतिपत्स्यन्ते सरितः सागरानिव॥
+प्रसातधितदिशो युष्मान् विमुक्तान्यमहीभृतः।  
+सम्पदः प्रतिपत्स्यन्ते सरितः सागरानिव॥
 
-स एष पुरतो याता प्राज्ञः परिमृशन् पथः। सङ्कल्प इव युष्माकं सात्यकिः सत्यविक्रमः॥
+स एष पुरतो याता प्राज्ञः परिमृशन् पथः।  
+सङ्कल्प इव युष्माकं सात्यकिः सत्यविक्रमः॥
 
-परिवारेण सम्पन्नस्त्यक्तकोशश्च कार्यतः।नन्दकोयमनिस्त्रिंशः सम्मतो मम शत्रुजित् ॥
+परिवारेण सम्पन्नस्त्यक्तकोशश्च कार्यतः।  
+नन्दकोयमनिस्त्रिंशः सम्मतो मम शत्रुजित् ॥
 
-जैत्रं ध्वजमिवोदग्रमेनमाहितलक्षणम्।अनुयात दिशो जेतुमस्त्रवेदमिवापरम् ॥
+जैत्रं ध्वजमिवोदग्रमेनमाहितलक्षणम्।  
+अनुयात दिशो जेतुमस्त्रवेदमिवापरम् ॥
 
-वनसिंहनयाद् गुप्तिर्मानतर्कक्रमादपि। परस्परपुरस्कारात् भवित्री भवतामिह॥
+वनसिंहनयाद् गुप्तिर्मानतर्कक्रमादपि।  
+परस्परपुरस्कारात् भवित्री भवतामिह॥
 
-अपि युष्माभिरेतावदहङ्कारग्रहोज्झितैः।अङगीकृतममुह्यद्भिरातुरैरिव भेषजम् ॥
+अपि युष्माभिरेतावदहङ्कारग्रहोज्झितैः।  
+अङगीकृतममुह्यद्भिरातुरैरिव भेषजम् ॥
 
-इति सूक्तिसुधां पीत्वा शौरिवक्त्रेन्दुनिस्सृताम्।सहसा नरदेवास्ते सौमनस्यं प्रपेदिरे॥
+इति सूक्तिसुधां पीत्वा शौरिवक्त्रेन्दुनिस्सृताम्।  
+सहसा नरदेवास्ते सौमनस्यं प्रपेदिरे॥
 
-तदुक्तिं शुकवत् सर्वे सॅल्लपन्तः परस्परम्।प्रहर्षमदधुस्तस्य प्रविष्टा नीतिपञ्जरम्॥
+तदुक्तिं शुकवत् सर्वे सॅल्लपन्तः परस्परम्।  
+प्रहर्षमदधुस्तस्य प्रविष्टा नीतिपञ्जरम्॥
 
-तृषितैरिव तं श्रोत्रैः संभृतश्रुतिसौरभाम्। पपुः प्रियहितां तस्य परिशुद्धां सरस्वतीम्॥
+तृषितैरिव तं श्रोत्रैः संभृतश्रुतिसौरभाम्।  
+पपुः प्रियहितां तस्य परिशुद्धां सरस्वतीम्॥
 
-असन्देहविपर्यासामसङ्कीर्णहिताहिताम्। त्रयीमिव गिरं तस्य मानयन्ति स्म ते नृपाः॥
+असन्देहविपर्यासामसङ्कीर्णहिताहिताम्।  
+त्रयीमिव गिरं तस्य मानयन्ति स्म ते नृपाः॥
 
-अथ यादवयूथेन सहितः संयुगप्रियः।सात्यकिः प्रचितोत्तंसः प्रतस्थे भर्तुराज्ञया॥
+अथ यादवयूथेन सहितः संयुगप्रियः।  
+सात्यकिः प्रचितोत्तंसः प्रतस्थे भर्तुराज्ञया॥
 
-धर्मगुप्तिकृताद्शः स मेने मधुवैरिणा । अपृथक्त्वामिवापन्नमन्यदायुधपञ्चकम्॥
+धर्मगुप्तिकृताद्शः स मेने मधुवैरिणा ।  
+अपृथक्त्वामिवापन्नमन्यदायुधपञ्चकम्॥
 
-सवकेतुकल्पनापूर्वं नियुक्तं हरिणा स्वयम्। तमेव तादृशाकारं तममन्यन्त यादवाः॥
+सवकेतुकल्पनापूर्वं नियुक्तं हरिणा स्वयम्।  
+तमेव तादृशाकारं तममन्यन्त यादवाः॥
 
-स वीरः शासनं भर्तुः शिरस्त्राणमिवोद्वहन्।अमन्यत जितप्रायाः सह दिक्पतिभिर्दिशः॥
+स वीरः शासनं भर्तुः शिरस्त्राणमिवोद्वहन्।  
+अमन्यत जितप्रायाः सह दिक्पतिभिर्दिशः॥
 
-पयोधिं तर्णकपदं पर्वतं सिकतामयम्।पातालं च स्थलीपृष्ठं प्रैक्षतामितविक्रमः॥
+पयोधिं तर्णकपदं पर्वतं सिकतामयम्।  
+पातालं च स्थलीपृष्ठं प्रैक्षतामितविक्रमः॥
 
-प्रयाणपटहस्तस्य प्रलयाम्बुदडम्बरः। नूनमानर्तयामास भुवं सह पयोधिभिः॥
+प्रयाणपटहस्तस्य प्रलयाम्बुदडम्बरः।  
+नूनमानर्तयामास भुवं सह पयोधिभिः॥
 
-प्रयान्ती पृतना सद्यः प्रणादैर्द्यामपूरयत्।वैरिवासकसज्जानां गणैरप्सरसामपि॥
+प्रयान्ती पृतना सद्यः प्रणादैर्द्यामपूरयत्।  
+वैरिवासकसज्जानां गणैरप्सरसामपि॥
 
-अधिरुह्य रथं जैत्रं स बभौ तार्क्ष्यसन्निभम्। जिगीषितदिशाचक्रश्चक्रपाणिरिवापरः॥
+अधिरुह्य रथं जैत्रं स बभौ तार्क्ष्यसन्निभम्।  
+जिगीषितदिशाचक्रश्चक्रपाणिरिवापरः॥
 
-दिव्यदुन्दुभिघोषेण पुष्पवर्षेण भूयसा।अशरीरिजयोक्त्या च तेन जज्ञे जितं जगत्॥
+दिव्यदुन्दुभिघोषेण पुष्पवर्षेण भूयसा।  
+अशरीरिजयोक्त्या च तेन जज्ञे जितं जगत्॥
 
-स विष्णुरिव विक्रान्त्या बलिध्वंसोद्यतो बली।सुषुवे त्रिषु लोकेषु कीर्तिं त्रिपथगामिव॥
+स विष्णुरिव विक्रान्त्या बलिध्वंसोद्यतो बली।  
+सुषुवे त्रिषु लोकेषु कीर्तिं त्रिपथगामिव॥
 
-ततो बुद्बुदफेनाभैः प्रचितां छत्त्रचामरैः।निनाय पृतनां प्राचीं गङ्गामिव भगीरथः॥
+ततो बुद्बुदफेनाभैः प्रचितां छत्त्रचामरैः।  
+निनाय पृतनां प्राचीं गङ्गामिव भगीरथः॥
 
-पृतनासागरौघेन पालयन् सागराम्बराम्।वीरो वेतसवृत्तीनां न भङ्गमभिसन्दधे॥
+पृतनासागरौघेन पालयन् सागराम्बराम्।  
+वीरो वेतसवृत्तीनां न भङ्गमभिसन्दधे॥
 
-महद्भिरपि तत्सैन्ये सम्पतद्भिः सुहृद्बलैः।न वृद्धिरभवद् दृश्या वर्षतोयैरिवाम्बुधौ॥
+महद्भिरपि तत्सैन्ये सम्पतद्भिः सुहृद्बलैः।  
+न वृद्धिरभवद् दृश्या वर्षतोयैरिवाम्बुधौ॥
 
-अशोभत पताकाग्रैरग्रहस्तैरनीकिनी। निर्दिश्य गणयन्तीव जेतव्यविषयान् निजैः॥
+अशोभत पताकाग्रैरग्रहस्तैरनीकिनी।  
+निर्दिश्य गणयन्तीव जेतव्यविषयान् निजैः॥
 
-तमीदिवसयोस्तत्र पृथिव्याकाशयोरपि। समपद्यत तादात्म्यं सैन्यरेणुसमुत्थितम् ॥
+तमीदिवसयोस्तत्र पृथिव्याकाशयोरपि।  
+समपद्यत तादात्म्यं सैन्यरेणुसमुत्थितम् ॥
 
-असूचीमुखभेद्यं तत् अचन्द्रार्कप्रतिक्रियम्। रुरोध द्विषतां दृष्टिं रजसा जनितं तमः॥
+असूचीमुखभेद्यं तत् अचन्द्रार्कप्रतिक्रियम्।  
+रुरोध द्विषतां दृष्टिं रजसा जनितं तमः॥
 
-अप्रतापमरुत्क्षिप्तः परागः प्रसरन् पुरः। आसन्नविनिपातानां वैवर्ण्यमदिशत् द्विषाम्॥
+अप्रतापमरुत्क्षिप्तः परागः प्रसरन् पुरः।  
+आसन्नविनिपातानां वैवर्ण्यमदिशत् द्विषाम्॥
 
-धूमकम्बलसान्द्रेण रेणुना गगनस्थली।नमन्तीं सैन्यभारेण शनैरनुजगाम गाम्॥
+धूमकम्बलसान्द्रेण रेणुना गगनस्थली।  
+नमन्तीं सैन्यभारेण शनैरनुजगाम गाम्॥
 
-पृथिवीं वर्धयनातीव पृतना खण्डयन्त्यपि । परागैः पूरयामास खातं सगरजन्मनाम्॥
+पृथिवीं वर्धयनातीव पृतना खण्डयन्त्यपि ।  
+परागैः पूरयामास खातं सगरजन्मनाम्॥
 
-ध्वजपल्लविता सेना शस्त्रपुष्पा परागिणी। बभौ चञ्चूर्यमाणेन मृत्योरुपवनस्थली॥
+ध्वजपल्लविता सेना शस्त्रपुष्पा परागिणी।  
+बभौ चञ्चूर्यमाणेन मृत्योरुपवनस्थली॥
 
-सा नूनमनुकुर्वाणा सिन्धुपत्न्यौ सितासिते। कुटिलप्रतिकूलर्द्धिः कूलङ्कषगतिर्ययौ॥
+सा नूनमनुकुर्वाणा सिन्धुपत्न्यौ सितासिते।  
+कुटिलप्रतिकूलर्द्धिः कूलङ्कषगतिर्ययौ॥
 
-विश्वतःप्रसृतिस्तस्या बभूव बहुपद्धतेः। वाहबन्धनकीलानामपर्याप्तवनद्रुमा ॥
+विश्वतःप्रसृतिस्तस्या बभूव बहुपद्धतेः।  
+वाहबन्धनकीलानामपर्याप्तवनद्रुमा ॥
 
-अविच्छिन्नगुणांश्चक्रे निस्त्रासान्निजसेनया। हारानिव भुवः शुद्धान् अग्रहारान् परार्पितान्॥
+अविच्छिन्नगुणांश्चक्रे निस्त्रासान्निजसेनया।  
+हारानिव भुवः शुद्धान् अग्रहारान् परार्पितान्॥
 
-अनाश्रमपदासन्नामभीषितकृषीवलाम्। अनैषीन्महतीं सेनामविरुन्धानगोपनीम्॥
+अनाश्रमपदासन्नामभीषितकृषीवलाम्।  
+अनैषीन्महतीं सेनामविरुन्धानगोपनीम्॥
 
-स्वद्शादविशेषेण स्वीकृते शत्रुमण्डले। न योधा जगृहुस्तत्र किञ्चिदस्वामिसम्मतम्॥
+स्वद्शादविशेषेण स्वीकृते शत्रुमण्डले।  
+न योधा जगृहुस्तत्र किञ्चिदस्वामिसम्मतम्॥
 
-विहारास्तस्य जन्येषु विमतानेव निघ्नतः। समं ददृशिरे देवैस्तत्तज्जानपदैरपि॥
+विहारास्तस्य जन्येषु विमतानेव निघ्नतः।  
+समं ददृशिरे देवैस्तत्तज्जानपदैरपि॥
 
-अदीनसत्त्वः शत्रूणां दीनसंरक्षणव्रती। अन्वकम्पत धात्रीभिरुपनीतान् स्तनन्धयान्॥
+अदीनसत्त्वः शत्रूणां दीनसंरक्षणव्रती।  
+अन्वकम्पत धात्रीभिरुपनीतान् स्तनन्धयान्॥
 
-अदृष्टसैन्यरजसामबाणस्पर्शवेदिनाम्।पश्यन् क्वचिदमित्राणां स जिह्राय पलायनम्॥
+अदृष्टसैन्यरजसामबाणस्पर्शवेदिनाम्।  
+पश्यन् क्वचिदमित्राणां स जिह्राय पलायनम्॥
 
-स मिथश्शौर्यसङ्घर्षादरातीन् अभिनिघ्नतः। पुनरुद्दीपयामास सत्कारेण गरीयसा॥
+स मिथश्शौर्यसङ्घर्षादरातीन् अभिनिघ्नतः।  
+पुनरुद्दीपयामास सत्कारेण गरीयसा॥
 
-क्रोधपावकदीप्तानां हेतीनां यदुपुङ्गवाः। विदधुस्तत्र वैरिस्त्रीबाष्पतोयेन सेचनम्॥
+क्रोधपावकदीप्तानां हेतीनां यदुपुङ्गवाः।  
+विदधुस्तत्र वैरिस्त्रीबाष्पतोयेन सेचनम्॥
 
-निहतप्रतिमातङ्गदन्तत्सरुपरिष्कृतान्। द्विषतां मौलिशाणेषु खड्गान् मुहुरशातयन्॥
+निहतप्रतिमातङ्गदन्तत्सरुपरिष्कृतान्।  
+द्विषतां मौलिशाणेषु खड्गान् मुहुरशातयन्॥
 
-शस्त्रधाराधरैस्तत्र विक्रमारण्यबर्हिणीम्। विपुले भुजशैलाग्रे वीरश्रियमनर्तयन्॥
+शस्त्रधाराधरैस्तत्र विक्रमारण्यबर्हिणीम्।  
+विपुले भुजशैलाग्रे वीरश्रियमनर्तयन्॥
 
-नियतं हेतयस्तेषां निपीते वह्निवारिणी।निदधुः शत्रुनारीणां चित्तेषु नयनेषु च ॥
+नियतं हेतयस्तेषां निपीते वह्निवारिणी।  
+निदधुः शत्रुनारीणां चित्तेषु नयनेषु च ॥
 
-अलभन्त क्षणात् तेषां पुरतः परिपन्थिनः। धनुषा नमता स्वर्गं वपुषा तु वसुन्धराम् ॥
+अलभन्त क्षणात् तेषां पुरतः परिपन्थिनः।  
+धनुषा नमता स्वर्गं वपुषा तु वसुन्धराम् ॥
 
-घूर्जरान् पारशीकांश्च प्रागेव भृतकीकृतान्।अपश्चात्पदविन्यासान् अकरोदग्रयायिनः॥
+घूर्जरान् पारशीकांश्च प्रागेव भृतकीकृतान्।  
+अपश्चात्पदविन्यासान् अकरोदग्रयायिनः॥
 
-मध्यदेशं वशीकृत्य योगीव प्रथमं मनः। प्रत्यन्तबहिरक्षाणि त्याजितायथाकरोत्॥
+मध्यदेशं वशीकृत्य योगीव प्रथमं मनः।  
+प्रत्यन्तबहिरक्षाणि त्याजितायथाकरोत्॥
 
-गृहीतचरमाम्भोधीन् गरुत्मानिव जग्रसे। धन्विनस्तुरगोपेतान् विमुखान् भुजगानिव॥
+गृहीतचरमाम्भोधीन् गरुत्मानिव जग्रसे।  
+धन्विनस्तुरगोपेतान् विमुखान् भुजगानिव॥
 
-यदवस्तत्र निस्त्रासा यवनैः स्तनयित्नुभिः। शैला इव दधुर्भीमां शरवृष्टिमुदीरिताम्॥
+यदवस्तत्र निस्त्रासा यवनैः स्तनयित्नुभिः।  
+शैला इव दधुर्भीमां शरवृष्टिमुदीरिताम्॥
 
-रक्तचन्दनदिग्धास्ते यशोभिः स्रग्वणस्तदा।जयश्रीपरिरम्भार्थं नैपथ्यमिव भेजिरे॥
+रक्तचन्दनदिग्धास्ते यशोभिः स्रग्वणस्तदा।  
+जयश्रीपरिरम्भार्थं नैपथ्यमिव भेजिरे॥
 
-कपिचूषिततालाभैः कृत्तैर्यवनमूर्धभिः।ददृशे कालभृत्यानां दत्तपिण्डेव मादिनी॥
+कपिचूषिततालाभैः कृत्तैर्यवनमूर्धभिः।  
+ददृशे कालभृत्यानां दत्तपिण्डेव मादिनी॥
 
-पीते यवनसैन्याब्धौ तत्कोपबडबाग्निना। शकाद्याः शरणं जग्मुः शङ्कातङ्केन सात्यकिम्॥
+पीते यवनसैन्याब्धौ तत्कोपबडबाग्निना।  
+शकाद्याः शरणं जग्मुः शङ्कातङ्केन सात्यकिम्॥
 
-प्रवालपल्लवास्तीर्णां रत्नपुष्पौघकर्बुराम्।विहारपदवीं मेने वेलामपरवारिधेः॥
+प्रवालपल्लवास्तीर्णां रत्नपुष्पौघकर्बुराम्।  
+विहारपदवीं मेने वेलामपरवारिधेः॥
 
-प्रचेतसापि दुष्प्रापैः प्रवालमणिमौक्तिकैः। तं पोतवणिजस्तत्र प्रभूतैः पर्यतोषयन्॥
+प्रचेतसापि दुष्प्रापैः प्रवालमणिमौक्तिकैः।  
+तं पोतवणिजस्तत्र प्रभूतैः पर्यतोषयन्॥
 
-निर्धूतनिगमांस्तत्र नैगमान् अपरान्तजान्। स वैद्य इव दुर्व्याधीन् दुर्जयान् अजयद्विभुः॥
+निर्धूतनिगमांस्तत्र नैगमान् अपरान्तजान्।  
+स वैद्य इव दुर्व्याधीन् दुर्जयान् अजयद्विभुः॥
 
-विहरन् वारुणीभाजा स वीरो विजयश्रिया।बभूव बर्बरस्त्रीणां परिदेवनदेशिकः॥
+विहरन् वारुणीभाजा स वीरो विजयश्रिया।  
+बभूव बर्बरस्त्रीणां परिदेवनदेशिकः॥
 
-उदनह्यन्त वार्ष्णेयाः कुन्तलान् समरश्लथान्।प्रवालैरपराम्भोधेरान्त्रैरिव समुद्धृतैः॥
+उदनह्यन्त वार्ष्णेयाः कुन्तलान् समरश्लथान्।  
+प्रवालैरपराम्भोधेरान्त्रैरिव समुद्धृतैः॥
 
-ततो विलुलितम्लेच्छः पश्चिमोदधिवेलया। अनुलप्रेयसीमाशाममनुष्यपदं ययौ॥
+ततो विलुलितम्लेच्छः पश्चिमोदधिवेलया।  
+अनुलप्रेयसीमाशाममनुष्यपदं ययौ॥
 
-हीरीतहरितैस्तत्र महार्घैर्मणिराशिभिः।गृहीतैरन्वगृह्यन्त तेन पोतोपजीविनः॥
+हीरीतहरितैस्तत्र महार्घैर्मणिराशिभिः।  
+गृहीतैरन्वगृह्यन्त तेन पोतोपजीविनः॥
 
-पश्चिमां दिशमाक्रम्य प्राङ्मुखं रथमास्थितम्।विपरीतगतिं सूर्यमुदीच्यास्तमजानत॥
+पश्चिमां दिशमाक्रम्य प्राङ्मुखं रथमास्थितम्।  
+विपरीतगतिं सूर्यमुदीच्यास्तमजानत॥
 
-स कृष्णवर्त्मविहृतिर्युगान्त इव संयुगे। अमुत्रलोकमदहत् दीप्तहेतिगणोल्बणः॥
+स कृष्णवर्त्मविहृतिर्युगान्त इव संयुगे।  
+अमुत्रलोकमदहत् दीप्तहेतिगणोल्बणः॥
 
-अनभ्रविद्युत्प्रतिमाः सायकास्तस्य धन्विनः।अभवन् हूणनारीणामश्रुवर्षपुरस्सराः॥
+अनभ्रविद्युत्प्रतिमाः सायकास्तस्य धन्विनः।  
+अभवन् हूणनारीणामश्रुवर्षपुरस्सराः॥
 
-द्विषतो देवदृश्येषु रणरङ्गेषु दीव्यतः। ताण्डवं ग्राहयामास निपातितशिरोधरान्॥
+द्विषतो देवदृश्येषु रणरङ्गेषु दीव्यतः।  
+ताण्डवं ग्राहयामास निपातितशिरोधरान्॥
 
-अपरस्परसापेक्षान् अतूणीरप्रकाशकान्। अशंसत् प्रतियोधानप्यवधीरितजीवितान्॥
+अपरस्परसापेक्षान् अतूणीरप्रकाशकान्।  
+अशंसत् प्रतियोधानप्यवधीरितजीवितान्॥
 
-महान्तो मण्डलं चेरुर्मध्येप्रतिबलं द्विपाः। प्रलयोदन्वदावर्ते भ्रमन्त इव पर्वताः॥
+महान्तो मण्डलं चेरुर्मध्येप्रतिबलं द्विपाः।  
+प्रलयोदन्वदावर्ते भ्रमन्त इव पर्वताः॥
 
-तत्र सैन्यरजश्चक्रे प्रतीचीरपि वाहिनीः। असमाहितबूद्धीनां चित्तवृत्तीरिवाविलाः॥
+तत्र सैन्यरजश्चक्रे प्रतीचीरपि वाहिनीः।  
+असमाहितबूद्धीनां चित्तवृत्तीरिवाविलाः॥
 
-त्रासमुक्तं पुनस्तत्र सिन्धुकाम्भोजयोषिताम्। अश्रुबिन्दुभिराबन्धि मौक्तिकस्तनमण्डनम्॥
+त्रासमुक्तं पुनस्तत्र सिन्धुकाम्भोजयोषिताम्।  
+अश्रुबिन्दुभिराबन्धि मौक्तिकस्तनमण्डनम्॥
 
-अकृष्टपच्यघुसृणामच्छिन्नौघमहापगाम्।अघर्मग्लपितारण्यामनघां भुवमन्वभूत्॥
+अकृष्टपच्यघुसृणामच्छिन्नौघमहापगाम्।  
+अघर्मग्लपितारण्यामनघां भुवमन्वभूत्॥
 
-अश्वीयखुरनिष्पिष्टभूधरक्षोदभूयसा।राजवीधीसमां चक्रे रजसा वालुकां नदीम् ॥
+अश्वीयखुरनिष्पिष्टभूधरक्षोदभूयसा।  
+राजवीधीसमां चक्रे रजसा वालुकां नदीम् ॥
 
-ग्रामणोरिव तैस्तस्य सैनिकैरवरोधिताः।स्त्रियः पुरुषधर्माणः स्त्रीत्वमेवोपलम्भिताः॥
+ग्रामणोरिव तैस्तस्य सैनिकैरवरोधिताः।  
+स्त्रियः पुरुषधर्माणः स्त्रीत्वमेवोपलम्भिताः॥
 
-बलेन महतास्कन्द्य मैनाकपितरं गिरिम् । प्रलयोदन्वदारोहमाकालिकमलम्भयत्॥
+बलेन महतास्कन्द्य मैनाकपितरं गिरिम् ।  
+प्रलयोदन्वदारोहमाकालिकमलम्भयत्॥
 
-समाजमिव शैलानां विश्वरूपमिव प्रभुम् । उत्तम्भनमिव व्योम्नः स निदध्सौ सकौतुकम्॥
+समाजमिव शैलानां विश्वरूपमिव प्रभुम् ।  
+उत्तम्भनमिव व्योम्नः स निदध्सौ सकौतुकम्॥
 
-श्वशुरं भूतनाथस्य स्कन्दमातामहं गिरिम्।प्रसूतिं सर्वरत्नानां पृथिवीधेनुतर्णकम् ॥
+श्वशुरं भूतनाथस्य स्कन्दमातामहं गिरिम्।  
+प्रसूतिं सर्वरत्नानां पृथिवीधेनुतर्णकम् ॥
 
-गृहीतास्त्याजितत्रासा मेनापतिवनौकसः।मार्गमादिदिशुस्तस्य वह्नेरिव समीरणाः॥
+गृहीतास्त्याजितत्रासा मेनापतिवनौकसः।  
+मार्गमादिदिशुस्तस्य वह्नेरिव समीरणाः॥
 
-तमारुह्य निरैक्षन्त जिघृक्षन्त इवान्धकाः। विकल्पितरवीन्द्वग्नीन् मेरुकैलासमन्दरान्॥
+तमारुह्य निरैक्षन्त जिघृक्षन्त इवान्धकाः।  
+विकल्पितरवीन्द्वग्नीन् मेरुकैलासमन्दरान्॥
 
-ददृशे गगनं तत्र दिवापि व्यक्ततारकम् । गौरीहारमणिप्रख्यैर्गङ्गानिर्झरशीकरैः॥
+ददृशे गगनं तत्र दिवापि व्यक्ततारकम् ।  
+गौरीहारमणिप्रख्यैर्गङ्गानिर्झरशीकरैः॥
 
-सुभगां किन्नरीणां च स्वगुणामोदमेदुराम्।गीतिं निशामयामासुः गजशार्दूलकर्षणीम्॥
+सुभगां किन्नरीणां च स्वगुणामोदमेदुराम्।  
+गीतिं निशामयामासुः गजशार्दूलकर्षणीम्॥
 
-गुहासु यमिनां मेने सैन्यघोषमशृण्वताम् । शृण्वतामपि सिंहानां समं सामिनिमीलनम्॥
+गुहासु यमिनां मेने सैन्यघोषमशृण्वताम् ।  
+शृण्वतामपि सिंहानां समं सामिनिमीलनम्॥
 
-अपश्यत् तत्र दूरस्थमन्तिकस्थमिवोन्मुखः। कैलासं किन्नरेन्द्रस्य कीर्तिकन्दमिवोत्थितम्॥
+अपश्यत् तत्र दूरस्थमन्तिकस्थमिवोन्मुखः।  
+कैलासं किन्नरेन्द्रस्य कीर्तिकन्दमिवोत्थितम्॥
 
-चमरान् सिंहशाबांश्च गन्धनाभिमृगानपि। जगृहुस्तत्र वार्ष्णेयाः प्रियासम्प्रीणनार्थिनः॥
+चमरान् सिंहशाबांश्च गन्धनाभिमृगानपि।  
+जगृहुस्तत्र वार्ष्णेयाः प्रियासम्प्रीणनार्थिनः॥
 
-गुञ्जाहारभृतः श्यामा बर्होल्लासितकुन्तलाः।प्रवालवसनाः प्रेक्ष्य जहसुः शबराङ्गनाः॥
+गुञ्जाहारभृतः श्यामा बर्होल्लासितकुन्तलाः।  
+प्रवालवसनाः प्रेक्ष्य जहसुः शबराङ्गनाः॥
 
-शिखरांसपरिष्कारैः सैन्यद्विपमदैर्बभौ।कल्कितः क्ष्माभृतां नाथः कस्तूरीस्थासकैरिव॥
+शिखरांसपरिष्कारैः सैन्यद्विपमदैर्बभौ।  
+कल्कितः क्ष्माभृतां नाथः कस्तूरीस्थासकैरिव॥
 
-श्रुत्वा गिरिगुहानूक्तं तत्सैन्यगजगर्जितम्।अपि सिंहाः पलायन्त वन्यद्विरदभेदिनः॥
+श्रुत्वा गिरिगुहानूक्तं तत्सैन्यगजगर्जितम्।  
+अपि सिंहाः पलायन्त वन्यद्विरदभेदिनः॥
 
-प्रदीप्तरत्नशिरसं प्रालेयपरिपाण्डरम्। प्रदक्षिणं व्यतीताय शेषयित्वा महीधरम् ॥
+प्रदीप्तरत्नशिरसं प्रालेयपरिपाण्डरम्।  
+प्रदक्षिणं व्यतीताय शेषयित्वा महीधरम् ॥
 
-अथ कस्तूरिकामोदैरधिवासितभूधरान्।यशसावास्य नेपालान् यदुवीरः स्वदेशयत्॥
+अथ कस्तूरिकामोदैरधिवासितभूधरान्।  
+यशसावास्य नेपालान् यदुवीरः स्वदेशयत्॥
 
-पर्वतेन्द्रप्रतिनिधीन् प्रागुत्तरमहीधरान्। सुप्रतीकविषाणाग्रैरवैक्षत गवाक्षितान् ॥
+पर्वतेन्द्रप्रतिनिधीन् प्रागुत्तरमहीधरान्।  
+सुप्रतीकविषाणाग्रैरवैक्षत गवाक्षितान् ॥
 
-द्वीपपर्वतदुर्गेषु द्विपसिंहनिभान् द्विषः।सङ्ग्राममृगयास्थायी जग्राह च जघान च ॥
+द्वीपपर्वतदुर्गेषु द्विपसिंहनिभान् द्विषः।  
+सङ्ग्राममृगयास्थायी जग्राह च जघान च ॥
 
-प्रभञ्जन इवाम्भोदान् पक्षीन्द्र इव पन्नगान्।प्राच्यान् प्रच्यावयामास पञ्चवक्त्र इव द्विपान्॥
+प्रभञ्जन इवाम्भोदान् पक्षीन्द्र इव पन्नगान्।  
+प्राच्यान् प्रच्यावयामास पञ्चवक्त्र इव द्विपान्॥
 
-शोषितप्राच्यजलधिः शौर्यबाडववह्निना। ससर्ज तद्वधूचित्तेष्वशोष्यं शोकवाधिम्॥
+शोषितप्राच्यजलधिः शौर्यबाडववह्निना।  
+ससर्ज तद्वधूचित्तेष्वशोष्यं शोकवाधिम्॥
 
-यदूनां हेतयस्तत्र शत्रुशोणितपाटलाः।प्रतापज्वलनज्वालासम्पदं प्रतिपेदिरे ॥
+यदूनां हेतयस्तत्र शत्रुशोणितपाटलाः।  
+प्रतापज्वलनज्वालासम्पदं प्रतिपेदिरे ॥
 
-कृपाणिकाभिः कुकुराः कम्पताभिरकम्पयन्।द्विषतां तद्वधूनां च चित्तदक्षिणलोचने॥
+कृपाणिकाभिः कुकुराः कम्पताभिरकम्पयन्।  
+द्विषतां तद्वधूनां च चित्तदक्षिणलोचने॥
 
-विजह्रुर्यादवास्तत्र विबुधस्त्रीवपप्रदाः। शराणां लक्षदातारः शत्रुसंमतविक्रमाः॥
+विजह्रुर्यादवास्तत्र विबुधस्त्रीवपप्रदाः।  
+शराणां लक्षदातारः शत्रुसंमतविक्रमाः॥
 
-विक्रमप्रभवे तेषां विजयश्रीस्वयंवरे।वन्दिकृत्यं द्विषश्चक्रुरप्सरोभिः स्वयंवृताः॥
+विक्रमप्रभवे तेषां विजयश्रीस्वयंवरे।  
+वन्दिकृत्यं द्विषश्चक्रुरप्सरोभिः स्वयंवृताः॥
 
-रमापतिपदोत्पन्नां रत्नाकरपतिंवराम्।पुण्यां सरितमासीदत् पुरभिन्मौलिमालिकाम्॥
+रमापतिपदोत्पन्नां रत्नाकरपतिंवराम्।  
+पुण्यां सरितमासीदत् पुरभिन्मौलिमालिकाम्॥
 
-स मेने जाह्नवीं यान्तीमर्थमेकमिवार्णवम्।प्रवाहैर्बहुधा भिन्नैर्भाषाभिरिव भारतीम् ॥
+स मेने जाह्नवीं यान्तीमर्थमेकमिवार्णवम्।  
+प्रवाहैर्बहुधा भिन्नैर्भाषाभिरिव भारतीम् ॥
 
-कृपाणधारातीर्थेन शोधयित्वा कृतागसः।त्रिदिवं प्रापयामास वङ्गांस्त्रिपथगान्तरे ॥
+कृपाणधारातीर्थेन शोधयित्वा कृतागसः।  
+त्रिदिवं प्रापयामास वङ्गांस्त्रिपथगान्तरे ॥
 
-विक्षिपन् भुवि निस्त्रिंशो वक्त्रपुष्पाणि वैरिणाम्।रणरङ्गटस्यास्य सूत्रधार इवाभवत्॥
+विक्षिपन् भुवि निस्त्रिंशो वक्त्रपुष्पाणि वैरिणाम्।  
+रणरङ्गटस्यास्य सूत्रधार इवाभवत्॥
 
-सैन्यदन्तिमदोपेतैः शत्रुस्त्रीबाष्पकज्जलैः।गङ्गां रविसुतां चक्रे यशसा तां च तन्मयीम्॥
+सैन्यदन्तिमदोपेतैः शत्रुस्त्रीबाष्पकज्जलैः।  
+गङ्गां रविसुतां चक्रे यशसा तां च तन्मयीम्॥
 
-आत्तसारा द्विषस्तत्र मुक्तास्तेन महीयसा। अदृश्यन्त यथापूर्वं दन्तिभुक्तकपित्थवत्॥
+आत्तसारा द्विषस्तत्र मुक्तास्तेन महीयसा।  
+अदृश्यन्त यथापूर्वं दन्तिभुक्तकपित्थवत्॥
 
-पृथुवीचिगणां तीर्त्वा पृथिवीसहजां नदीम्।बाधिताशेषगौडेन बलेनार्णवमाद्रवत् ॥
+पृथुवीचिगणां तीर्त्वा पृथिवीसहजां नदीम्।  
+बाधिताशेषगौडेन बलेनार्णवमाद्रवत् ॥
 
-अलभन्त महीपालाः पुरतस्तस्य निर्भयाः। नतेन धनुषा नाकं वपुषा च वस्न्धराम्॥
+अलभन्त महीपालाः पुरतस्तस्य निर्भयाः।  
+नतेन धनुषा नाकं वपुषा च वस्न्धराम्॥
 
-विशन्तो वाहिनीं तस्य त्रिस्रोतसमिवापराम् ।त्रिदिवं प्रत्यपद्यन्त प्रतियोधा निरागसः॥
+विशन्तो वाहिनीं तस्य त्रिस्रोतसमिवापराम् ।  
+त्रिदिवं प्रत्यपद्यन्त प्रतियोधा निरागसः॥
 
-कुटिलान् प्रगुणीकृत्य स्वनामाक्षरभूषितान् । जङ्मान् दर्शयामास जयस्तम्भान् महीतले॥
+कुटिलान् प्रगुणीकृत्य स्वनामाक्षरभूषितान् ।  
+जङ्मान् दर्शयामास जयस्तम्भान् महीतले॥
 
-शालीनिव सतस्त्रातुं तत्र तत्र प्ररोहतः।यवसौघनिभान् याप्यान् उज्जहार यदूद्वहः॥
+शालीनिव सतस्त्रातुं तत्र तत्र प्ररोहतः।  
+यवसौघनिभान् याप्यान् उज्जहार यदूद्वहः॥
 
-प्रतापाग्निं पुरस्कृत्य भुवस्सागरवाससः।वेलावलयसम्पन्नं करं जग्राह तत्र सः॥
+प्रतापाग्निं पुरस्कृत्य भुवस्सागरवाससः।  
+वेलावलयसम्पन्नं करं जग्राह तत्र सः॥
 
-पुरन्दरसमः पूर्वं जित्वा पौरन्दरीं दिशम्।दीक्षितःसत्परित्राणे दक्षिणाभिमुखोभवत्॥
+पुरन्दरसमः पूर्वं जित्वा पौरन्दरीं दिशम्।  
+दीक्षितःसत्परित्राणे दक्षिणाभिमुखोभवत्॥
 
-उपदीकृत्य सर्वस्वमुपसन्नयदूद्वहाः। प्राचीमविकलामृद्धिमुत्कलाः प्रतिपेदिरे॥
+उपदीकृत्य सर्वस्वमुपसन्नयदूद्वहाः।  
+प्राचीमविकलामृद्धिमुत्कलाः प्रतिपेदिरे॥
 
-प्रहितानथ कालिङ्गैः पन्थानमुपरुन्धतः।रुरोध सिंहनादेन यदुसिंहः स सिन्धुरान्॥
+प्रहितानथ कालिङ्गैः पन्थानमुपरुन्धतः।  
+रुरोध सिंहनादेन यदुसिंहः स सिन्धुरान्॥
 
-स तान् गैरिकरक्ताङ्गान् सप्तधा स्रुतनिर्झरान्।जङ्गमानिव विन्ध्यादीन् जगृहे गन्धहस्तिनः॥
+स तान् गैरिकरक्ताङ्गान् सप्तधा स्रुतनिर्झरान्।  
+जङ्गमानिव विन्ध्यादीन् जगृहे गन्धहस्तिनः॥
 
-प्रतियुध्य परिश्रान्तान् गृहीत्वा गजयोधिनः। चक्रलिङ्गधरांश्चक्रे कालिङ्गान् किङ्करीकृतान्॥
+प्रतियुध्य परिश्रान्तान् गृहीत्वा गजयोधिनः।  
+चक्रलिङ्गधरांश्चक्रे कालिङ्गान् किङ्करीकृतान्॥
 
-स तेषामपि सामन्तान् आहूतान् विन्ध्यदुर्गतः। दक्षान् द्विरदशिक्षायां चक्रे निजनिषादिसात्॥
+स तेषामपि सामन्तान् आहूतान् विन्ध्यदुर्गतः।  
+दक्षान् द्विरदशिक्षायां चक्रे निजनिषादिसात्॥
 
-वैरिवारणमूर्धन्यैर्मौक्तिकैर्लाजतां गतैः।रणाग्निर्दर्शयामास व्यूढां तेन जयश्रियम् ॥
+वैरिवारणमूर्धन्यैर्मौक्तिकैर्लाजतां गतैः।  
+रणाग्निर्दर्शयामास व्यूढां तेन जयश्रियम् ॥
 
-दारितद्विरदांस्तत्र सिंहानिव महाजवान्। ननन्द स्वभटान् दृष्ट्वा नखरश्रितमौक्तिकान्॥
+दारितद्विरदांस्तत्र सिंहानिव महाजवान्।  
+ननन्द स्वभटान् दृष्ट्वा नखरश्रितमौक्तिकान्॥
 
-विपक्षान् भूभृतस्तत्र कुर्वता निर्विचेष्टितान्।देवो हरिहयस्तेन द्विरूपत्वमिवान्वभूत्॥
+विपक्षान् भूभृतस्तत्र कुर्वता निर्विचेष्टितान्।  
+देवो हरिहयस्तेन द्विरूपत्वमिवान्वभूत्॥
 
 अपर्युषितपानायामनघस्रोतसं शुभाम्।गङ्गामिव विभक्ताङ्गीं प्राप गोदावरीं ततः॥
 
