--- a/laxyam/padyam/shrIvaiShNava-kRtam/venkaTanAthaH/yAdavAbhyudayam/23.md
+++ b/laxyam/padyam/shrIvaiShNava-kRtam/venkaTanAthaH/yAdavAbhyudayam/23.md
@@ -1,5 +1,5 @@
 +++
-title = "23 सर्गः-23"
+title = "23"
 
 +++
 अथाधिकारच्यवनात् य इन्द्राः पञ्चाभवन् पाण्डुसुताः पृथिव्याम्।   
@@ -65,7 +65,8 @@ title = "23 सर्गः-23"
 नरांशजुष्टेन धनञ्जयेन रथी भवन् सारथिरात्मना च ।   
 धनुर्भृता तोत्रभृता च भेजे पृथक्त्वमैक्यं च यथाप्रमाणम्॥
 
-रथाधिरूढं च रथं च रक्षन् यथार्थतो दर्शयति स्म यन्ता।पुरःस्थिते गोप्तरि विश्वहेतौ पश्चादवस्थायिनि तत्प्रवर्त्ये ।   
+रथाधिरूढं च रथं च रक्षन् यथार्थतो दर्शयति स्म यन्ता।  
+पुरःस्थिते गोप्तरि विश्वहेतौ पश्चादवस्थायिनि तत्प्रवर्त्ये ।   
 अनन्ययोगात् स रथो बभार प्राधीतवेद्यां प्रणवप्रवृत्तिम्॥
 
 प्रभुर्बभौ प्रग्रहतोत्त्रपाणिः कालात्मना भावितपाशदण्डः।   
@@ -113,7 +114,8 @@ title = "23 सर्गः-23"
 यथा नियच्छत्ययनिन्द्रियाश्वान् जीवाश्रमे देहरथे निबद्धान्।   
 तथार्जुनस्यन्दनधुर्यनेता बभूव नान्येन निदर्शनीयः॥
 
-यदेकदेशे निखिलं तदन्यत् तद्देहभागेषु च संविभक्तम्।निवर्तितं वैरिजनोपमर्दात् न्यस्तं रथे चक्रमुपाददानः।   
+यदेकदेशे निखिलं तदन्यत् तद्देहभागेषु च संविभक्तम्।  
+निवर्तितं वैरिजनोपमर्दात् न्यस्तं रथे चक्रमुपाददानः।   
 नतप्रतिज्ञानुपरोधहेतोः आत्मप्रतिज्ञामजहात् स्वतन्त्रः॥
 
 द्विषत्प्रयुक्तं दुरपोहमस्त्रं भुजान्तरालेन विभुः प्रतीच्छन्।   
